--- a/72_Mamba_State_Space_Models.ipynb
+++ b/72_Mamba_State_Space_Models.ipynb
@@ -2,28 +2,35 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/72_Mamba_State_Space_Models.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "fe376cce",
    "metadata": {},
    "source": [
-    "# 🐍 Mamba & SSM: Czy to koniec Transformera?\n",
+    "# \ud83d\udc0d Mamba & SSM: Czy to koniec Transformera?\n",
     "\n",
-    "Transformer musi \"patrzeć\" na całą historię rozmowy naraz (macierz Attention). To kosztuje gigabajty pamięci.\n",
-    "Mamba używa **State Space Models (SSM)**.\n",
+    "Transformer musi \"patrze\u0107\" na ca\u0142\u0105 histori\u0119 rozmowy naraz (macierz Attention). To kosztuje gigabajty pami\u0119ci.\n",
+    "Mamba u\u017cywa **State Space Models (SSM)**.\n",
     "\n",
-    "Idea pochodzi z fizyki i sterowania (np. jak sterować termostatem):\n",
+    "Idea pochodzi z fizyki i sterowania (np. jak sterowa\u0107 termostatem):\n",
     "$$ h'(t) = \\mathbf{A}h(t) + \\mathbf{B}x(t) $$\n",
     "$$ y(t) = \\mathbf{C}h(t) $$\n",
     "\n",
-    "*   **x(t):** Wejście (słowo).\n",
-    "*   **h(t):** Stan ukryty (pamięć/kontekst).\n",
-    "*   **y(t):** Wyjście (następne słowo).\n",
-    "*   **A, B, C:** Macierze, których się uczymy.\n",
+    "*   **x(t):** Wej\u015bcie (s\u0142owo).\n",
+    "*   **h(t):** Stan ukryty (pami\u0119\u0107/kontekst).\n",
+    "*   **y(t):** Wyj\u015bcie (nast\u0119pne s\u0142owo).\n",
+    "*   **A, B, C:** Macierze, kt\u00f3rych si\u0119 uczymy.\n",
     "\n",
     "**Genialny trik:**\n",
-    "1.  Podczas **treningu** używamy splotów (Convolution), żeby liczyć wszystko naraz.\n",
-    "2.  Podczas **generowania** używamy rekurencji (Recurrence), żeby liczyć krok po kroku (bardzo szybko).\n",
+    "1.  Podczas **treningu** u\u017cywamy splot\u00f3w (Convolution), \u017ceby liczy\u0107 wszystko naraz.\n",
+    "2.  Podczas **generowania** u\u017cywamy rekurencji (Recurrence), \u017ceby liczy\u0107 krok po kroku (bardzo szybko).\n",
     "\n",
-    "Zaimplementujemy prostą warstwę SSM od zera."
+    "Zaimplementujemy prost\u0105 warstw\u0119 SSM od zera."
    ]
   },
   {
@@ -49,7 +56,7 @@
     "\n",
     "# Konfiguracja\n",
     "DEVICE = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
-    "D_MODEL = 8   # Wymiar wejścia\n",
+    "D_MODEL = 8   # Wymiar wej\u015bcia\n",
     "D_STATE = 16  # Wymiar stanu ukrytego (Latent State)\n",
     "\n",
     "print(f\"Symulacja SSM na: {DEVICE}\")"
@@ -60,16 +67,16 @@
    "id": "4feccbd1",
    "metadata": {},
    "source": [
-    "## Krok 1: Dyskretyzacja (Świat ciągły vs Komputer)\n",
+    "## Krok 1: Dyskretyzacja (\u015awiat ci\u0105g\u0142y vs Komputer)\n",
     "\n",
-    "Równania SSM są ciągłe (dla fizyki). Komputery są dyskretne (kroki czasowe).\n",
-    "Musimy zamienić macierze $\\mathbf{A}$ i $\\mathbf{B}$ na ich dyskretne odpowiedniki $\\overline{\\mathbf{A}}$ i $\\overline{\\mathbf{B}}$.\n",
+    "R\u00f3wnania SSM s\u0105 ci\u0105g\u0142e (dla fizyki). Komputery s\u0105 dyskretne (kroki czasowe).\n",
+    "Musimy zamieni\u0107 macierze $\\mathbf{A}$ i $\\mathbf{B}$ na ich dyskretne odpowiedniki $\\overline{\\mathbf{A}}$ i $\\overline{\\mathbf{B}}$.\n",
     "\n",
-    "Używamy metody **Zero-Order Hold (ZOH)** i parametru $\\Delta$ (Delta - krok czasu).\n",
+    "U\u017cywamy metody **Zero-Order Hold (ZOH)** i parametru $\\Delta$ (Delta - krok czasu).\n",
     "$$ \\overline{\\mathbf{A}} = \\exp(\\Delta \\mathbf{A}) $$\n",
     "$$ \\overline{\\mathbf{B}} = (\\Delta \\mathbf{A})^{-1} (\\exp(\\Delta \\mathbf{A}) - I) \\cdot \\Delta \\mathbf{B} $$\n",
     "\n",
-    "W uproszczeniu: $\\overline{\\mathbf{A}}$ mówi nam, jak bardzo pamięć \"zanika\" z kroku na krok."
+    "W uproszczeniu: $\\overline{\\mathbf{A}}$ m\u00f3wi nam, jak bardzo pami\u0119\u0107 \"zanika\" z kroku na krok."
    ]
   },
   {
@@ -88,8 +95,8 @@
    ],
    "source": [
     "def discretize(A, B, C, delta):\n",
-    "    # Uproszczona dyskretyzacja (przybliżenie Bilinearne dla szybkości)\n",
-    "    # W prawdziwej Mambie używa się dokładniejszych metod\n",
+    "    # Uproszczona dyskretyzacja (przybli\u017cenie Bilinearne dla szybko\u015bci)\n",
+    "    # W prawdziwej Mambie u\u017cywa si\u0119 dok\u0142adniejszych metod\n",
     "    \n",
     "    dt = delta.unsqueeze(-1) # [D_model, 1]\n",
     "    \n",
@@ -98,7 +105,7 @@
     "    dA = A * dt\n",
     "    A_bar = torch.exp(dA)\n",
     "    \n",
-    "    # B_bar (Input): Jak bardzo nowe wejście wpływa na stan?\n",
+    "    # B_bar (Input): Jak bardzo nowe wej\u015bcie wp\u0142ywa na stan?\n",
     "    # (1/A * (exp(A*dt) - 1)) * B\n",
     "    B_bar = (1/A * (torch.exp(A * dt) - 1)) * B\n",
     "    \n",
@@ -114,13 +121,13 @@
    "source": [
     "## Krok 2: Widok Rekurencyjny (RNN Mode)\n",
     "\n",
-    "To tryb używany przez ChatGPT/Mambę podczas rozmowy z użytkownikiem (Inference).\n",
-    "Pamiętamy tylko **ostatni stan** ($h_{t-1}$).\n",
+    "To tryb u\u017cywany przez ChatGPT/Mamb\u0119 podczas rozmowy z u\u017cytkownikiem (Inference).\n",
+    "Pami\u0119tamy tylko **ostatni stan** ($h_{t-1}$).\n",
     "Nowy stan to:\n",
     "$$ h_t = \\overline{\\mathbf{A}} h_{t-1} + \\overline{\\mathbf{B}} x_t $$\n",
     "$$ y_t = \\mathbf{C} h_t $$\n",
     "\n",
-    "To jest super szybkie ($O(1)$) i zużywa mało pamięci."
+    "To jest super szybkie ($O(1)$) i zu\u017cywa ma\u0142o pami\u0119ci."
    ]
   },
   {
@@ -145,34 +152,34 @@
     "        self.d_state = d_state\n",
     "        \n",
     "        # Parametry (Trainable)\n",
-    "        # A musi być ujemne, żeby system był stabilny (pamięć nie wybuchała)\n",
+    "        # A musi by\u0107 ujemne, \u017ceby system by\u0142 stabilny (pami\u0119\u0107 nie wybucha\u0142a)\n",
     "        self.A = nn.Parameter(torch.randn(d_model, d_state) * 0.5 - 1.0)\n",
     "        self.B = nn.Parameter(torch.randn(d_model, d_state))\n",
     "        self.C = nn.Parameter(torch.randn(d_model, d_state))\n",
     "        \n",
-    "        # Krok czasu (Delta) - też się go uczymy!\n",
+    "        # Krok czasu (Delta) - te\u017c si\u0119 go uczymy!\n",
     "        self.delta = nn.Parameter(torch.rand(d_model))\n",
     "\n",
     "    def forward_rnn(self, x):\n",
     "        # x: [Batch, Seq_Len, D_Model]\n",
     "        batch_size, seq_len, _ = x.shape\n",
     "        \n",
-    "        # 1. Dyskretyzacja parametrów\n",
+    "        # 1. Dyskretyzacja parametr\u00f3w\n",
     "        A_bar, B_bar, C = discretize(self.A, self.B, self.C, F.softplus(self.delta))\n",
     "        \n",
-    "        # 2. Pętla rekurencyjna (RNN)\n",
-    "        h = torch.zeros(batch_size, self.d_model, self.d_state).to(x.device) # Stan początkowy\n",
+    "        # 2. P\u0119tla rekurencyjna (RNN)\n",
+    "        h = torch.zeros(batch_size, self.d_model, self.d_state).to(x.device) # Stan pocz\u0105tkowy\n",
     "        outputs = []\n",
     "        \n",
     "        for t in range(seq_len):\n",
     "            x_t = x[:, t, :] # Obecny token\n",
     "            \n",
-    "            # Wzór RNN: h_new = A_bar * h_old + B_bar * x\n",
-    "            # Używamy element-wise multiplication dla uproszczenia (Diagonal SSM)\n",
+    "            # Wz\u00f3r RNN: h_new = A_bar * h_old + B_bar * x\n",
+    "            # U\u017cywamy element-wise multiplication dla uproszczenia (Diagonal SSM)\n",
     "            h = A_bar * h + B_bar * x_t.unsqueeze(-1)\n",
     "            \n",
-    "            # Wyjście: y = C * h\n",
-    "            y_t = torch.sum(C * h, dim=-1) # Rzutujemy stan na wyjście\n",
+    "            # Wyj\u015bcie: y = C * h\n",
+    "            y_t = torch.sum(C * h, dim=-1) # Rzutujemy stan na wyj\u015bcie\n",
     "            outputs.append(y_t)\n",
     "            \n",
     "        return torch.stack(outputs, dim=1)\n",
@@ -188,11 +195,11 @@
    "source": [
     "## Krok 3: Widok Splotowy (Convolutional Mode)\n",
     "\n",
-    "To tryb używany podczas **treningu**.\n",
-    "Zamiast pętli `for` (która jest wolna na GPU), możemy zauważyć, że wzór SSM można zapisać jako **długi splot (Convolution)**.\n",
+    "To tryb u\u017cywany podczas **treningu**.\n",
+    "Zamiast p\u0119tli `for` (kt\u00f3ra jest wolna na GPU), mo\u017cemy zauwa\u017cy\u0107, \u017ce wz\u00f3r SSM mo\u017cna zapisa\u0107 jako **d\u0142ugi splot (Convolution)**.\n",
     "\n",
-    "Jądro splotu (Kernel) $\\mathbf{K}$ to po prostu \"zasięg pamięci\".\n",
-    "Możemy obliczyć całą sekwencję naraz (równolegle), używając FFT (Fast Fourier Transform). To dlatego Mamba trenuje się tak szybko jak Transformer."
+    "J\u0105dro splotu (Kernel) $\\mathbf{K}$ to po prostu \"zasi\u0119g pami\u0119ci\".\n",
+    "Mo\u017cemy obliczy\u0107 ca\u0142\u0105 sekwencj\u0119 naraz (r\u00f3wnolegle), u\u017cywaj\u0105c FFT (Fast Fourier Transform). To dlatego Mamba trenuje si\u0119 tak szybko jak Transformer."
    ]
   },
   {
@@ -205,8 +212,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wejście: torch.Size([1, 20, 8])\n",
-      "Wyjście: torch.Size([1, 20, 8])\n"
+      "Wej\u015bcie: torch.Size([1, 20, 8])\n",
+      "Wyj\u015bcie: torch.Size([1, 20, 8])\n"
      ]
     },
     {
@@ -222,19 +229,19 @@
    ],
    "source": [
     "# Symulacja danych\n",
-    "x_input = torch.randn(1, 20, D_MODEL).to(DEVICE) # Sekwencja 20 kroków\n",
+    "x_input = torch.randn(1, 20, D_MODEL).to(DEVICE) # Sekwencja 20 krok\u00f3w\n",
     "\n",
     "# Uruchamiamy tryb RNN\n",
     "output_rnn = model.forward_rnn(x_input)\n",
     "\n",
-    "print(f\"Wejście: {x_input.shape}\")\n",
-    "print(f\"Wyjście: {output_rnn.shape}\")\n",
+    "print(f\"Wej\u015bcie: {x_input.shape}\")\n",
+    "print(f\"Wyj\u015bcie: {output_rnn.shape}\")\n",
     "\n",
-    "# Wizualizacja jednego kanału\n",
+    "# Wizualizacja jednego kana\u0142u\n",
     "plt.figure(figsize=(10, 4))\n",
-    "plt.plot(x_input[0, :, 0].cpu().detach().numpy(), label='Input (Sygnał)', marker='o')\n",
+    "plt.plot(x_input[0, :, 0].cpu().detach().numpy(), label='Input (Sygna\u0142)', marker='o')\n",
     "plt.plot(output_rnn[0, :, 0].cpu().detach().numpy(), label='Output (SSM Memory)', linestyle='--')\n",
-    "plt.title(\"Jak SSM przetwarza sygnał (Wygładzanie / Pamięć)\")\n",
+    "plt.title(\"Jak SSM przetwarza sygna\u0142 (Wyg\u0142adzanie / Pami\u0119\u0107)\")\n",
     "plt.legend()\n",
     "plt.grid(True, alpha=0.3)\n",
     "plt.show()"
@@ -245,19 +252,19 @@
    "id": "e8321d62",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Selektywność (Selective Scan)\n",
+    "## \ud83e\udde0 Podsumowanie: Selektywno\u015b\u0107 (Selective Scan)\n",
     "\n",
-    "To, co zrobiliśmy powyżej, to klasyczne SSM (jak w modelu S4).\n",
-    "**Mamba** dodaje do tego **Selektywność**.\n",
+    "To, co zrobili\u015bmy powy\u017cej, to klasyczne SSM (jak w modelu S4).\n",
+    "**Mamba** dodaje do tego **Selektywno\u015b\u0107**.\n",
     "\n",
-    "W zwykłym SSM macierze $\\mathbf{A}, \\mathbf{B}, \\Delta$ są stałe dla całego tekstu.\n",
-    "W Mambie te macierze **zależą od wejścia $x(t)$**.\n",
-    "*   Model widzi słowo \"Umbrella\".\n",
-    "*   Zmienia swoje $\\Delta$ i $\\mathbf{A}$, żeby \"otworzyć bramkę pamięci\" i zapisać to słowo na długo.\n",
-    "*   Widzi słowo \"the\".\n",
-    "*   Zmienia parametry, żeby to zignorować.\n",
+    "W zwyk\u0142ym SSM macierze $\\mathbf{A}, \\mathbf{B}, \\Delta$ s\u0105 sta\u0142e dla ca\u0142ego tekstu.\n",
+    "W Mambie te macierze **zale\u017c\u0105 od wej\u015bcia $x(t)$**.\n",
+    "*   Model widzi s\u0142owo \"Umbrella\".\n",
+    "*   Zmienia swoje $\\Delta$ i $\\mathbf{A}$, \u017ceby \"otworzy\u0107 bramk\u0119 pami\u0119ci\" i zapisa\u0107 to s\u0142owo na d\u0142ugo.\n",
+    "*   Widzi s\u0142owo \"the\".\n",
+    "*   Zmienia parametry, \u017ceby to zignorowa\u0107.\n",
     "\n",
-    "Dzięki temu Mamba potrafi filtrować informacje (Selectivity), czego stare RNN nie potrafiły, a robi to szybciej niż Transformer."
+    "Dzi\u0119ki temu Mamba potrafi filtrowa\u0107 informacje (Selectivity), czego stare RNN nie potrafi\u0142y, a robi to szybciej ni\u017c Transformer."
    ]
   }
  ],
