--- a/73_Mixture_of_Experts_MoE.ipynb
+++ b/73_Mixture_of_Experts_MoE.ipynb
@@ -2,22 +2,29 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/73_Mixture_of_Experts_MoE.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "23f04cfb",
    "metadata": {},
    "source": [
-    "# 🧠 Mixture of Experts (MoE): Architektura GPT-4\n",
+    "# \ud83e\udde0 Mixture of Experts (MoE): Architektura GPT-4\n",
     "\n",
-    "W standardowym Transformerze (Dense) każde słowo przechodzi przez te same warstwy.\n",
-    "W MoE zamieniamy warstwę FeedForward (FFN) na zestaw **N Ekspertów**.\n",
+    "W standardowym Transformerze (Dense) ka\u017cde s\u0142owo przechodzi przez te same warstwy.\n",
+    "W MoE zamieniamy warstw\u0119 FeedForward (FFN) na zestaw **N Ekspert\u00f3w**.\n",
     "\n",
     "**Kluczowe elementy:**\n",
-    "1.  **Eksperci:** Niezależne sieci neuronowe (zazwyczaj proste MLP).\n",
-    "2.  **Gating Network (Router):** Mała sieć, która dla każdego tokena decyduje, których ekspertów uruchomić.\n",
-    "3.  **Top-K:** Zazwyczaj wybieramy tylko 2 najlepszych ekspertów z 8 (Top-2 Gating).\n",
+    "1.  **Eksperci:** Niezale\u017cne sieci neuronowe (zazwyczaj proste MLP).\n",
+    "2.  **Gating Network (Router):** Ma\u0142a sie\u0107, kt\u00f3ra dla ka\u017cdego tokena decyduje, kt\u00f3rych ekspert\u00f3w uruchomi\u0107.\n",
+    "3.  **Top-K:** Zazwyczaj wybieramy tylko 2 najlepszych ekspert\u00f3w z 8 (Top-2 Gating).\n",
     "\n",
     "**Zysk:**\n",
-    "*   Model ma np. 8x więcej parametrów (Pojemność wiedzy).\n",
-    "*   Ale koszt obliczeniowy (FLOPs) jest taki sam jak małego modelu (Szybkość)."
+    "*   Model ma np. 8x wi\u0119cej parametr\u00f3w (Pojemno\u015b\u0107 wiedzy).\n",
+    "*   Ale koszt obliczeniowy (FLOPs) jest taki sam jak ma\u0142ego modelu (Szybko\u015b\u0107)."
    ]
   },
   {
@@ -42,9 +49,9 @@
     "\n",
     "# Konfiguracja\n",
     "DEVICE = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
-    "D_MODEL = 32      # Wymiar wektora słowa\n",
-    "NUM_EXPERTS = 4   # Liczba ekspertów\n",
-    "TOP_K = 2         # Ilu ekspertów wybieramy dla każdego słowa?\n",
+    "D_MODEL = 32      # Wymiar wektora s\u0142owa\n",
+    "NUM_EXPERTS = 4   # Liczba ekspert\u00f3w\n",
+    "TOP_K = 2         # Ilu ekspert\u00f3w wybieramy dla ka\u017cdego s\u0142owa?\n",
     "\n",
     "print(f\"Symulacja MoE na: {DEVICE}\")"
    ]
@@ -56,7 +63,7 @@
    "source": [
     "## 1. Ekspert (Expert Network)\n",
     "\n",
-    "Ekspert to nic innego jak zwykła sieć `FeedForward`, którą robiliśmy w notatniku 46.\n",
+    "Ekspert to nic innego jak zwyk\u0142a sie\u0107 `FeedForward`, kt\u00f3r\u0105 robili\u015bmy w notatniku 46.\n",
     "W MoE mamy ich po prostu wiele kopii."
    ]
   },
@@ -70,7 +77,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Stworzono 4 ekspertów.\n"
+      "Stworzono 4 ekspert\u00f3w.\n"
      ]
     }
    ],
@@ -81,15 +88,15 @@
     "        self.net = nn.Sequential(\n",
     "            nn.Linear(d_model, d_model * 4), # Rozszerzamy\n",
     "            nn.ReLU(),\n",
-    "            nn.Linear(d_model * 4, d_model)  # Zwężamy\n",
+    "            nn.Linear(d_model * 4, d_model)  # Zw\u0119\u017camy\n",
     "        )\n",
     "\n",
     "    def forward(self, x):\n",
     "        return self.net(x)\n",
     "\n",
-    "# Stwórzmy listę ekspertów\n",
+    "# Stw\u00f3rzmy list\u0119 ekspert\u00f3w\n",
     "experts_list = nn.ModuleList([Expert(D_MODEL) for _ in range(NUM_EXPERTS)])\n",
-    "print(f\"Stworzono {len(experts_list)} ekspertów.\")"
+    "print(f\"Stworzono {len(experts_list)} ekspert\u00f3w.\")"
    ]
   },
   {
@@ -99,13 +106,13 @@
    "source": [
     "## 2. Gating Network (Router)\n",
     "\n",
-    "To jest mózg operacji.\n",
-    "Dla każdego wektora wejściowego $x$, Router wylicza \"punkty\" dla każdego eksperta.\n",
-    "Następnie bierze **Top-K** (najlepszych dwóch) i normalizuje ich wagi (Softmax).\n",
+    "To jest m\u00f3zg operacji.\n",
+    "Dla ka\u017cdego wektora wej\u015bciowego $x$, Router wylicza \"punkty\" dla ka\u017cdego eksperta.\n",
+    "Nast\u0119pnie bierze **Top-K** (najlepszych dw\u00f3ch) i normalizuje ich wagi (Softmax).\n",
     "\n",
     "$$ G(x) = \\text{Softmax}(\\text{TopK}(W_g \\cdot x)) $$\n",
     "\n",
-    "Jeśli Router wybierze Eksperta A (waga 0.7) i Eksperta B (waga 0.3), to wynik jest ważoną sumą ich odpowiedzi."
+    "Je\u015bli Router wybierze Eksperta A (waga 0.7) i Eksperta B (waga 0.3), to wynik jest wa\u017con\u0105 sum\u0105 ich odpowiedzi."
    ]
   },
   {
@@ -129,38 +136,38 @@
     "        self.num_experts = num_experts\n",
     "        self.top_k = top_k\n",
     "        \n",
-    "        # Lista Ekspertów\n",
+    "        # Lista Ekspert\u00f3w\n",
     "        self.experts = nn.ModuleList([Expert(d_model) for _ in range(num_experts)])\n",
     "        \n",
-    "        # Router (Mała sieć, która ocenia przydatność eksperta)\n",
+    "        # Router (Ma\u0142a sie\u0107, kt\u00f3ra ocenia przydatno\u015b\u0107 eksperta)\n",
     "        self.gate = nn.Linear(d_model, num_experts)\n",
     "\n",
     "    def forward(self, x):\n",
     "        # x shape: [Batch, Seq_Len, D_Model]\n",
-    "        # Spłaszczamy batch i seq, żeby traktować każdy token osobno\n",
+    "        # Sp\u0142aszczamy batch i seq, \u017ceby traktowa\u0107 ka\u017cdy token osobno\n",
     "        original_shape = x.shape\n",
     "        x_flat = x.view(-1, original_shape[-1]) \n",
     "        \n",
-    "        # 1. Router ocenia (Logity dla każdego eksperta)\n",
+    "        # 1. Router ocenia (Logity dla ka\u017cdego eksperta)\n",
     "        router_logits = self.gate(x_flat) # [Tokens, Num_Experts]\n",
     "        \n",
     "        # 2. Wybieramy Top-K\n",
     "        # values: Wagi (jak pewny jest router)\n",
-    "        # indices: ID wybranych ekspertów\n",
+    "        # indices: ID wybranych ekspert\u00f3w\n",
     "        routing_weights, selected_experts = torch.topk(router_logits, self.top_k, dim=-1)\n",
     "        \n",
     "        # 3. Normalizujemy wagi (Softmax tylko na wybranych!)\n",
     "        routing_weights = F.softmax(routing_weights, dim=-1)\n",
     "        \n",
-    "        # 4. Uruchamiamy Ekspertów\n",
-    "        # W prawdziwym wydajnym kodzie (CUDA) tutaj dzieje się magia (Sparse Kernel).\n",
-    "        # W Pythonie zrobimy to pętlą dla przejrzystości (wolniej, ale zrozumiale).\n",
+    "        # 4. Uruchamiamy Ekspert\u00f3w\n",
+    "        # W prawdziwym wydajnym kodzie (CUDA) tutaj dzieje si\u0119 magia (Sparse Kernel).\n",
+    "        # W Pythonie zrobimy to p\u0119tl\u0105 dla przejrzysto\u015bci (wolniej, ale zrozumiale).\n",
     "        \n",
     "        final_output = torch.zeros_like(x_flat)\n",
     "        \n",
-    "        # Iterujemy po każdym tokenie\n",
+    "        # Iterujemy po ka\u017cdym tokenie\n",
     "        for i, token_vec in enumerate(x_flat):\n",
-    "            # Dla każdego tokena bierzemy jego wybranych ekspertów\n",
+    "            # Dla ka\u017cdego tokena bierzemy jego wybranych ekspert\u00f3w\n",
     "            for k in range(self.top_k):\n",
     "                expert_idx = selected_experts[i, k].item()\n",
     "                weight = routing_weights[i, k]\n",
@@ -168,7 +175,7 @@
     "                # Uruchom wybranego eksperta\n",
     "                expert_out = self.experts[expert_idx](token_vec.unsqueeze(0))\n",
     "                \n",
-    "                # Dodaj ważony wynik do sumy\n",
+    "                # Dodaj wa\u017cony wynik do sumy\n",
     "                final_output[i] += weight * expert_out.squeeze(0)\n",
     "        \n",
     "        return final_output.view(original_shape), selected_experts\n",
@@ -185,8 +192,8 @@
    "source": [
     "## Symulacja i Analiza Routera\n",
     "\n",
-    "Wrzucimy do modelu losowe dane (symulacja różnych słów) i zobaczymy, jak Router rozdziela pracę.\n",
-    "Czy Router jest leniwy i zawsze wybiera Eksperta nr 0? (To częsty problem w MoE, zwany **Load Balancing**)."
+    "Wrzucimy do modelu losowe dane (symulacja r\u00f3\u017cnych s\u0142\u00f3w) i zobaczymy, jak Router rozdziela prac\u0119.\n",
+    "Czy Router jest leniwy i zawsze wybiera Eksperta nr 0? (To cz\u0119sty problem w MoE, zwany **Load Balancing**)."
    ]
   },
   {
@@ -199,8 +206,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wejście: torch.Size([1, 100, 32])\n",
-      "Wyjście: torch.Size([1, 100, 32])\n"
+      "Wej\u015bcie: torch.Size([1, 100, 32])\n",
+      "Wyj\u015bcie: torch.Size([1, 100, 32])\n"
      ]
     },
     {
@@ -217,36 +224,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Jeśli słupki są równe -> Router działa dobrze (Load Balanced).\n",
-      "Jeśli jeden słupek dominuje -> Mamy problem (Expert Collapse).\n"
+      "Je\u015bli s\u0142upki s\u0105 r\u00f3wne -> Router dzia\u0142a dobrze (Load Balanced).\n",
+      "Je\u015bli jeden s\u0142upek dominuje -> Mamy problem (Expert Collapse).\n"
      ]
     }
    ],
    "source": [
-    "# Dane wejściowe: 100 tokenów\n",
+    "# Dane wej\u015bciowe: 100 token\u00f3w\n",
     "dummy_input = torch.randn(1, 100, D_MODEL).to(DEVICE)\n",
     "\n",
-    "# Przepływ\n",
+    "# Przep\u0142yw\n",
     "output, assignments = moe(dummy_input)\n",
     "\n",
-    "print(f\"Wejście: {dummy_input.shape}\")\n",
-    "print(f\"Wyjście: {output.shape}\")\n",
+    "print(f\"Wej\u015bcie: {dummy_input.shape}\")\n",
+    "print(f\"Wyj\u015bcie: {output.shape}\")\n",
     "\n",
-    "# ANALIZA PRZYDZIAŁÓW\n",
+    "# ANALIZA PRZYDZIA\u0141\u00d3W\n",
     "# assignments shape: [1, 100, 2] -> [Wszystkie tokeny, Top-2]\n",
     "flat_assignments = assignments.flatten().cpu().numpy()\n",
     "\n",
     "plt.figure(figsize=(10, 5))\n",
     "plt.hist(flat_assignments, bins=range(NUM_EXPERTS+1), align='left', rwidth=0.8, color='purple')\n",
     "plt.xticks(range(NUM_EXPERTS))\n",
-    "plt.title(\"Obciążenie Ekspertów (Kto ile pracuje?)\")\n",
+    "plt.title(\"Obci\u0105\u017cenie Ekspert\u00f3w (Kto ile pracuje?)\")\n",
     "plt.xlabel(\"ID Eksperta\")\n",
-    "plt.ylabel(\"Liczba obsłużonych tokenów\")\n",
+    "plt.ylabel(\"Liczba obs\u0142u\u017conych token\u00f3w\")\n",
     "plt.grid(axis='y', alpha=0.3)\n",
     "plt.show()\n",
     "\n",
-    "print(\"Jeśli słupki są równe -> Router działa dobrze (Load Balanced).\")\n",
-    "print(\"Jeśli jeden słupek dominuje -> Mamy problem (Expert Collapse).\")"
+    "print(\"Je\u015bli s\u0142upki s\u0105 r\u00f3wne -> Router dzia\u0142a dobrze (Load Balanced).\")\n",
+    "print(\"Je\u015bli jeden s\u0142upek dominuje -> Mamy problem (Expert Collapse).\")"
    ]
   },
   {
@@ -254,15 +261,15 @@
    "id": "4b0046c4",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Skalowanie horyzontalne\n",
+    "## \ud83e\udde0 Podsumowanie: Skalowanie horyzontalne\n",
     "\n",
     "MoE to sekret skalowania.\n",
-    "Gdybyś chciał zbudować model 10x mądrzejszy (Gęsty), musiałbyś kupić 10x więcej GPU do *uruchomienia* go.\n",
-    "W MoE możesz dodać 100 nowych ekspertów (zwiększyć wiedzę), a koszt generowania tekstu (Inference) prawie nie wzrośnie (bo i tak używasz tylko 2 naraz).\n",
+    "Gdyby\u015b chcia\u0142 zbudowa\u0107 model 10x m\u0105drzejszy (G\u0119sty), musia\u0142by\u015b kupi\u0107 10x wi\u0119cej GPU do *uruchomienia* go.\n",
+    "W MoE mo\u017cesz doda\u0107 100 nowych ekspert\u00f3w (zwi\u0119kszy\u0107 wiedz\u0119), a koszt generowania tekstu (Inference) prawie nie wzro\u015bnie (bo i tak u\u017cywasz tylko 2 naraz).\n",
     "\n",
-    "**Problemy inżynierskie:**\n",
-    "1.  **VRAM:** Mimo że obliczenia są szybkie, *wszyscy* eksperci muszą być załadowani do pamięci karty graficznej. MoE wymaga dużo VRAM (np. 80GB A100).\n",
-    "2.  **Expert Collapse:** Router może się \"zakochać\" w jednym ekspercie i ignorować resztę. Wtedy tracimy zalety MoE. Stosuje się specjalne \"Auxiliary Loss\", żeby zmuszać Router do sprawiedliwości."
+    "**Problemy in\u017cynierskie:**\n",
+    "1.  **VRAM:** Mimo \u017ce obliczenia s\u0105 szybkie, *wszyscy* eksperci musz\u0105 by\u0107 za\u0142adowani do pami\u0119ci karty graficznej. MoE wymaga du\u017co VRAM (np. 80GB A100).\n",
+    "2.  **Expert Collapse:** Router mo\u017ce si\u0119 \"zakocha\u0107\" w jednym ekspercie i ignorowa\u0107 reszt\u0119. Wtedy tracimy zalety MoE. Stosuje si\u0119 specjalne \"Auxiliary Loss\", \u017ceby zmusza\u0107 Router do sprawiedliwo\u015bci."
    ]
   }
  ],
