--- a/74_Liquid_Neural_Networks_LFC.ipynb
+++ b/74_Liquid_Neural_Networks_LFC.ipynb
@@ -2,24 +2,31 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/74_Liquid_Neural_Networks_LFC.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "af74f3eb",
    "metadata": {},
    "source": [
-    "# 💧 Liquid Neural Networks: Sieci, które \"płyną\"\n",
+    "# \ud83d\udca7 Liquid Neural Networks: Sieci, kt\u00f3re \"p\u0142yn\u0105\"\n",
     "\n",
-    "Standardowe RNN (jak LSTM) działają w dyskretnych krokach (krok 1, krok 2...).\n",
-    "Liquid Networks są oparte na **Równaniach Różniczkowych (ODE)**. Działają w czasie ciągłym.\n",
+    "Standardowe RNN (jak LSTM) dzia\u0142aj\u0105 w dyskretnych krokach (krok 1, krok 2...).\n",
+    "Liquid Networks s\u0105 oparte na **R\u00f3wnaniach R\u00f3\u017cniczkowych (ODE)**. Dzia\u0142aj\u0105 w czasie ci\u0105g\u0142ym.\n",
     "\n",
     "**Kluczowa innowacja:**\n",
-    "W zwykłym neuronie waga $W$ jest stała.\n",
-    "W Liquid Network, szybkość reakcji neuronu (**Stała Czasowa $\\tau$**) zależy od wejścia.\n",
+    "W zwyk\u0142ym neuronie waga $W$ jest sta\u0142a.\n",
+    "W Liquid Network, szybko\u015b\u0107 reakcji neuronu (**Sta\u0142a Czasowa $\\tau$**) zale\u017cy od wej\u015bcia.\n",
     "\n",
     "$$ \\frac{dh(t)}{dt} = -\\frac{h(t)}{\\tau(x)} + f(x, h) $$\n",
     "\n",
-    "*   Gdy $\\tau$ jest małe -> Neuron reaguje błyskawicznie (jak woda).\n",
-    "*   Gdy $\\tau$ jest duże -> Neuron zachowuje pamięć (jak miód).\n",
+    "*   Gdy $\\tau$ jest ma\u0142e -> Neuron reaguje b\u0142yskawicznie (jak woda).\n",
+    "*   Gdy $\\tau$ jest du\u017ce -> Neuron zachowuje pami\u0119\u0107 (jak mi\u00f3d).\n",
     "\n",
-    "To sprawia, że sieć \"dostosowuje swoją lepkość\" do sytuacji. Zbudujemy komórkę LTC (Liquid Time-Constant)."
+    "To sprawia, \u017ce sie\u0107 \"dostosowuje swoj\u0105 lepko\u015b\u0107\" do sytuacji. Zbudujemy kom\u00f3rk\u0119 LTC (Liquid Time-Constant)."
    ]
   },
   {
@@ -46,7 +53,7 @@
     "# Konfiguracja\n",
     "DEVICE = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "INPUT_DIM = 1\n",
-    "HIDDEN_DIM = 16  # Wystarczy bardzo mało neuronów! (LSTM potrzebowałby 50-100)\n",
+    "HIDDEN_DIM = 16  # Wystarczy bardzo ma\u0142o neuron\u00f3w! (LSTM potrzebowa\u0142by 50-100)\n",
     "OUTPUT_DIM = 1\n",
     "\n",
     "print(f\"Symulacja LNN na: {DEVICE}\")"
@@ -57,15 +64,15 @@
    "id": "c15cafda",
    "metadata": {},
    "source": [
-    "## Matematyka Komórki LTC\n",
+    "## Matematyka Kom\u00f3rki LTC\n",
     "\n",
-    "Zamiast używać gotowego solvera ODE (który jest wolny), użyjemy przybliżenia **Euler Integration**.\n",
-    "Dzięki temu możemy to zapisać jako szybką warstwę w PyTorch.\n",
+    "Zamiast u\u017cywa\u0107 gotowego solvera ODE (kt\u00f3ry jest wolny), u\u017cyjemy przybli\u017cenia **Euler Integration**.\n",
+    "Dzi\u0119ki temu mo\u017cemy to zapisa\u0107 jako szybk\u0105 warstw\u0119 w PyTorch.\n",
     "\n",
-    "Dla każdego kroku czasowego:\n",
-    "1.  Obliczamy nową stałą czasową $\\tau$ na podstawie wejścia (to jest ta \"płynność\").\n",
-    "2.  Obliczamy sygnał wejściowy (Sigmoid).\n",
-    "3.  Mieszamy stary stan z nowym, w proporcji zależnej od $\\tau$.\n",
+    "Dla ka\u017cdego kroku czasowego:\n",
+    "1.  Obliczamy now\u0105 sta\u0142\u0105 czasow\u0105 $\\tau$ na podstawie wej\u015bcia (to jest ta \"p\u0142ynno\u015b\u0107\").\n",
+    "2.  Obliczamy sygna\u0142 wej\u015bciowy (Sigmoid).\n",
+    "3.  Mieszamy stary stan z nowym, w proporcji zale\u017cnej od $\\tau$.\n",
     "\n",
     "$$ h_{new} = (h_{old} \\cdot (1 - \\frac{dt}{\\tau})) + (sygnal \\cdot \\frac{dt}{\\tau}) $$"
    ]
@@ -80,8 +87,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Liczba parametrów: 593\n",
-      "Zauważ, jak mało parametrów! (Ok. 600). LSTM miałby tysiące.\n"
+      "Liczba parametr\u00f3w: 593\n",
+      "Zauwa\u017c, jak ma\u0142o parametr\u00f3w! (Ok. 600). LSTM mia\u0142by tysi\u0105ce.\n"
      ]
     }
    ],
@@ -91,39 +98,39 @@
     "        super().__init__()\n",
     "        self.hidden_dim = hidden_dim\n",
     "        \n",
-    "        # Wagi do obliczania sygnału\n",
+    "        # Wagi do obliczania sygna\u0142u\n",
     "        self.weight_xh = nn.Linear(input_dim, hidden_dim)\n",
     "        self.weight_hh = nn.Linear(hidden_dim, hidden_dim)\n",
     "        \n",
-    "        # Wagi do obliczania Stałej Czasowej (Tau)\n",
+    "        # Wagi do obliczania Sta\u0142ej Czasowej (Tau)\n",
     "        # To jest unikalne dla Liquid Networks!\n",
     "        self.weight_tau = nn.Linear(hidden_dim, hidden_dim)\n",
     "        \n",
     "    def forward(self, x, h_prev, dt=0.1):\n",
-    "        # 1. Obliczamy sygnał wejściowy (zwykły RNN)\n",
-    "        # Tanh spłaszcza wartości do [-1, 1]\n",
+    "        # 1. Obliczamy sygna\u0142 wej\u015bciowy (zwyk\u0142y RNN)\n",
+    "        # Tanh sp\u0142aszcza warto\u015bci do [-1, 1]\n",
     "        signal = torch.tanh(self.weight_xh(x) + self.weight_hh(h_prev))\n",
     "        \n",
-    "        # 2. Obliczamy Tau (Płynność) zależną od stanu\n",
-    "        # Sigmoid + mała stała, żeby nie dzielić przez zero (tau > 0)\n",
-    "        # Tau zależy od h_prev - sieć sama decyduje, jak szybko chce się zmieniać!\n",
+    "        # 2. Obliczamy Tau (P\u0142ynno\u015b\u0107) zale\u017cn\u0105 od stanu\n",
+    "        # Sigmoid + ma\u0142a sta\u0142a, \u017ceby nie dzieli\u0107 przez zero (tau > 0)\n",
+    "        # Tau zale\u017cy od h_prev - sie\u0107 sama decyduje, jak szybko chce si\u0119 zmienia\u0107!\n",
     "        tau = torch.sigmoid(self.weight_tau(h_prev)) + 0.1\n",
     "        \n",
-    "        # 3. Rozwiązanie równania różniczkowego (Metoda Eulera)\n",
+    "        # 3. Rozwi\u0105zanie r\u00f3wnania r\u00f3\u017cniczkowego (Metoda Eulera)\n",
     "        # h(t+1) = h(t) + dh/dt * dt\n",
     "        # dh/dt = -(h - signal) / tau\n",
     "        \n",
     "        # Wersja numerycznie stabilna (Leaky Integrator):\n",
     "        # Mieszanka: (1 - alpha) * stare + alpha * nowe\n",
     "        alpha = dt / tau\n",
-    "        # Clampujemy alpha do 0-1, żeby nie wybuchło przy dużym dt\n",
+    "        # Clampujemy alpha do 0-1, \u017ceby nie wybuch\u0142o przy du\u017cym dt\n",
     "        alpha = torch.clamp(alpha, 0.0, 1.0)\n",
     "        \n",
     "        h_new = (1 - alpha) * h_prev + alpha * signal\n",
     "        \n",
     "        return h_new\n",
     "\n",
-    "# Warstwa opakowująca (z pętlą czasu)\n",
+    "# Warstwa opakowuj\u0105ca (z p\u0119tl\u0105 czasu)\n",
     "class LiquidNetwork(nn.Module):\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
@@ -134,7 +141,7 @@
     "        # x: [Batch, Time, Features]\n",
     "        batch_size, seq_len, _ = x.shape\n",
     "        \n",
-    "        # Stan początkowy (zera)\n",
+    "        # Stan pocz\u0105tkowy (zera)\n",
     "        h = torch.zeros(batch_size, HIDDEN_DIM).to(x.device)\n",
     "        outputs = []\n",
     "        \n",
@@ -147,8 +154,8 @@
     "        return torch.stack(outputs, dim=1) # [Batch, Time, Output]\n",
     "\n",
     "model = LiquidNetwork().to(DEVICE)\n",
-    "print(f\"Liczba parametrów: {sum(p.numel() for p in model.parameters())}\")\n",
-    "print(\"Zauważ, jak mało parametrów! (Ok. 600). LSTM miałby tysiące.\")"
+    "print(f\"Liczba parametr\u00f3w: {sum(p.numel() for p in model.parameters())}\")\n",
+    "print(\"Zauwa\u017c, jak ma\u0142o parametr\u00f3w! (Ok. 600). LSTM mia\u0142by tysi\u0105ce.\")"
    ]
   },
   {
@@ -158,8 +165,8 @@
    "source": [
     "## Test: Zaszumiona Sinusoida\n",
     "\n",
-    "Sprawdźmy, czy ta malutka sieć poradzi sobie z przewidywaniem szeregu czasowego, który jest mocno zaszumiony.\n",
-    "LNN słyną z odporności na szum."
+    "Sprawd\u017amy, czy ta malutka sie\u0107 poradzi sobie z przewidywaniem szeregu czasowego, kt\u00f3ry jest mocno zaszumiony.\n",
+    "LNN s\u0142yn\u0105 z odporno\u015bci na szum."
    ]
   },
   {
@@ -183,7 +190,7 @@
       "Epoka 140 | Loss: 0.00230\n",
       "Epoka 160 | Loss: 0.00216\n",
       "Epoka 180 | Loss: 0.00203\n",
-      "✅ Trening zakończony.\n"
+      "\u2705 Trening zako\u0144czony.\n"
      ]
     }
    ],
@@ -193,8 +200,8 @@
     "clean_signal = np.sin(t * 0.2)\n",
     "noisy_signal = clean_signal + np.random.normal(0, 0.1, len(t)) # 10% szumu\n",
     "\n",
-    "# Przygotowanie tensorów [Batch, Time, Features]\n",
-    "# Uczymy na jednym długim ciągu (Batch=1)\n",
+    "# Przygotowanie tensor\u00f3w [Batch, Time, Features]\n",
+    "# Uczymy na jednym d\u0142ugim ci\u0105gu (Batch=1)\n",
     "input_seq = torch.tensor(noisy_signal[:-1], dtype=torch.float32).view(1, -1, 1).to(DEVICE)\n",
     "target_seq = torch.tensor(clean_signal[1:], dtype=torch.float32).view(1, -1, 1).to(DEVICE)\n",
     "\n",
@@ -215,7 +222,7 @@
     "    if epoch % 20 == 0:\n",
     "        print(f\"Epoka {epoch} | Loss: {loss.item():.5f}\")\n",
     "\n",
-    "print(\"✅ Trening zakończony.\")"
+    "print(\"\u2705 Trening zako\u0144czony.\")"
    ]
   },
   {
@@ -255,18 +262,18 @@
    "id": "cbf5f602",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Dlaczego to przyszłość robotyki?\n",
+    "## \ud83e\udde0 Podsumowanie: Dlaczego to przysz\u0142o\u015b\u0107 robotyki?\n",
     "\n",
-    "Spójrz na wykres. Czerwona linia (LNN) powinna być **gładsza** niż szare tło (szum).\n",
-    "Sieć nauczyła się dynamiki fali, ignorując drgania.\n",
+    "Sp\u00f3jrz na wykres. Czerwona linia (LNN) powinna by\u0107 **g\u0142adsza** ni\u017c szare t\u0142o (szum).\n",
+    "Sie\u0107 nauczy\u0142a si\u0119 dynamiki fali, ignoruj\u0105c drgania.\n",
     "\n",
-    "Dlaczego to jest ważne?\n",
-    "Wyobraź sobie drona latającego w lesie.\n",
-    "*   Kamera trzęsie się, liście szumią (dużo zakłóceń).\n",
-    "*   Zwykła sieć (sztywna) próbowałaby reagować na każdy ruch liścia -> dron by wariował.\n",
-    "*   **LNN (Płynna)** \"wygładza\" rzeczywistość. Dostosowuje swoje $\\tau$, żeby ignorować szybkie zmiany (szum), a reagować na wolne zmiany (przeszkoda).\n",
+    "Dlaczego to jest wa\u017cne?\n",
+    "Wyobra\u017a sobie drona lataj\u0105cego w lesie.\n",
+    "*   Kamera trz\u0119sie si\u0119, li\u015bcie szumi\u0105 (du\u017co zak\u0142\u00f3ce\u0144).\n",
+    "*   Zwyk\u0142a sie\u0107 (sztywna) pr\u00f3bowa\u0142aby reagowa\u0107 na ka\u017cdy ruch li\u015bcia -> dron by wariowa\u0142.\n",
+    "*   **LNN (P\u0142ynna)** \"wyg\u0142adza\" rzeczywisto\u015b\u0107. Dostosowuje swoje $\\tau$, \u017ceby ignorowa\u0107 szybkie zmiany (szum), a reagowa\u0107 na wolne zmiany (przeszkoda).\n",
     "\n",
-    "To dlatego te sieci (mając zaledwie 19 neuronów!) potrafią sterować autonomicznymi samochodami lepiej niż wielkie CNN."
+    "To dlatego te sieci (maj\u0105c zaledwie 19 neuron\u00f3w!) potrafi\u0105 sterowa\u0107 autonomicznymi samochodami lepiej ni\u017c wielkie CNN."
    ]
   }
  ],
