--- a/75_Meta_Learning_MAML.ipynb
+++ b/75_Meta_Learning_MAML.ipynb
@@ -2,22 +2,29 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/75_Meta_Learning_MAML.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0ba123c9",
    "metadata": {},
    "source": [
-    "# 🧠 Meta-Learning (MAML): Learning to Learn\n",
+    "# \ud83e\udde0 Meta-Learning (MAML): Learning to Learn\n",
     "\n",
-    "Standardowe AI uczy się jednego zadania (np. rozpoznawania psów).\n",
-    "Meta-Learning uczy się **jak się uczyć**.\n",
+    "Standardowe AI uczy si\u0119 jednego zadania (np. rozpoznawania ps\u00f3w).\n",
+    "Meta-Learning uczy si\u0119 **jak si\u0119 uczy\u0107**.\n",
     "\n",
-    "Celem MAML jest znalezienie takich parametrów początkowych $\\theta$, które po zobaczeniu zaledwie kilku przykładów (Few-Shot) i wykonaniu **jednego kroku gradientu**, idealnie dopasują się do nowego zadania.\n",
+    "Celem MAML jest znalezienie takich parametr\u00f3w pocz\u0105tkowych $\\theta$, kt\u00f3re po zobaczeniu zaledwie kilku przyk\u0142ad\u00f3w (Few-Shot) i wykonaniu **jednego kroku gradientu**, idealnie dopasuj\u0105 si\u0119 do nowego zadania.\n",
     "\n",
-    "**Mechanizm (Dwie pętle):**\n",
-    "1.  **Inner Loop (Szybka adaptacja):** Bierzemy kopię modelu. Pokazujemy jej 5 punktów z nowego zadania. Robimy jeden krok treningowy.\n",
-    "2.  **Outer Loop (Meta-aktualizacja):** Sprawdzamy, jak ta kopia radzi sobie na testowych danych. Jeśli dobrze -> nagradzamy **oryginalny model** (nie kopię), że był dobrym punktem startowym.\n",
+    "**Mechanizm (Dwie p\u0119tle):**\n",
+    "1.  **Inner Loop (Szybka adaptacja):** Bierzemy kopi\u0119 modelu. Pokazujemy jej 5 punkt\u00f3w z nowego zadania. Robimy jeden krok treningowy.\n",
+    "2.  **Outer Loop (Meta-aktualizacja):** Sprawdzamy, jak ta kopia radzi sobie na testowych danych. Je\u015bli dobrze -> nagradzamy **oryginalny model** (nie kopi\u0119), \u017ce by\u0142 dobrym punktem startowym.\n",
     "\n",
     "**Zadanie:** Regresja Sinusoidy.\n",
-    "Każde \"zadanie\" to inna sinusoida (inna amplituda i faza). Model widzi 5 punktów i musi narysować całą resztę."
+    "Ka\u017cde \"zadanie\" to inna sinusoida (inna amplituda i faza). Model widzi 5 punkt\u00f3w i musi narysowa\u0107 ca\u0142\u0105 reszt\u0119."
    ]
   },
   {
@@ -30,7 +37,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Będziemy uczyć się sinusoidy na podstawie 5 punktów.\n"
+      "B\u0119dziemy uczy\u0107 si\u0119 sinusoidy na podstawie 5 punkt\u00f3w.\n"
      ]
     }
    ],
@@ -43,12 +50,12 @@
     "import copy\n",
     "\n",
     "# Konfiguracja\n",
-    "DEVICE = \"cpu\" # MAML na prostym przykładzie działa szybciej na CPU (narzut kopiowania na GPU jest duży)\n",
-    "K_SHOT = 5     # Ile punktów widzi model? (Tylko 5!)\n",
-    "META_LR = 0.001 # Jak szybko uczy się \"mózg matka\"\n",
-    "INNER_LR = 0.01 # Jak szybko uczy się \"kopia\" (adaptacja)\n",
+    "DEVICE = \"cpu\" # MAML na prostym przyk\u0142adzie dzia\u0142a szybciej na CPU (narzut kopiowania na GPU jest du\u017cy)\n",
+    "K_SHOT = 5     # Ile punkt\u00f3w widzi model? (Tylko 5!)\n",
+    "META_LR = 0.001 # Jak szybko uczy si\u0119 \"m\u00f3zg matka\"\n",
+    "INNER_LR = 0.01 # Jak szybko uczy si\u0119 \"kopia\" (adaptacja)\n",
     "\n",
-    "print(f\"Będziemy uczyć się sinusoidy na podstawie {K_SHOT} punktów.\")"
+    "print(f\"B\u0119dziemy uczy\u0107 si\u0119 sinusoidy na podstawie {K_SHOT} punkt\u00f3w.\")"
    ]
   },
   {
@@ -56,12 +63,12 @@
    "id": "cadd198e",
    "metadata": {},
    "source": [
-    "## Generator Zadań\n",
+    "## Generator Zada\u0144\n",
     "\n",
-    "W Meta-Learningu naszymi \"danymi\" nie są obrazki, ale **zadania**.\n",
+    "W Meta-Learningu naszymi \"danymi\" nie s\u0105 obrazki, ale **zadania**.\n",
     "Jedno zadanie = Jedna losowa sinusoida.\n",
     "$$ y = A \\sin(x + \\phi) $$\n",
-    "Gdzie $A$ (Amplituda) i $\\phi$ (Faza) są losowe."
+    "Gdzie $A$ (Amplituda) i $\\phi$ (Faza) s\u0105 losowe."
    ]
   },
   {
@@ -95,7 +102,7 @@
     "        y = self.amplitude * np.sin(x + self.phase)\n",
     "        return torch.tensor(x, dtype=torch.float32), torch.tensor(y, dtype=torch.float32)\n",
     "\n",
-    "# Zobaczmy przykładowe zadanie\n",
+    "# Zobaczmy przyk\u0142adowe zadanie\n",
     "task = SineWaveTask()\n",
     "x_support, y_support = task.sample_data(K_SHOT)\n",
     "\n",
@@ -109,9 +116,9 @@
    "id": "59f102db",
    "metadata": {},
    "source": [
-    "## Model (Sieć Neuronowa)\n",
+    "## Model (Sie\u0107 Neuronowa)\n",
     "\n",
-    "Prosty MLP: 1 wejście (x) -> 40 ukrytych -> 40 ukrytych -> 1 wyjście (y)."
+    "Prosty MLP: 1 wej\u015bcie (x) -> 40 ukrytych -> 40 ukrytych -> 1 wyj\u015bcie (y)."
    ]
   },
   {
@@ -143,7 +150,7 @@
     "    def forward(self, x):\n",
     "        return self.net(x)\n",
     "\n",
-    "# Inicjalizacja \"Mózgu Matki\" (Meta-Model)\n",
+    "# Inicjalizacja \"M\u00f3zgu Matki\" (Meta-Model)\n",
     "meta_model = SimpleModel()\n",
     "meta_optimizer = optim.Adam(meta_model.parameters(), lr=META_LR)\n",
     "criterion = nn.MSELoss()\n",
@@ -158,15 +165,15 @@
    "source": [
     "## Algorytm MAML (Manualny Gradient)\n",
     "\n",
-    "To jest najtrudniejsza część. PyTorch domyślnie nie pozwala liczyć \"pochodnej z pochodnej\" (Second Order Derivative), chyba że użyjemy `create_graph=True`.\n",
+    "To jest najtrudniejsza cz\u0119\u015b\u0107. PyTorch domy\u015blnie nie pozwala liczy\u0107 \"pochodnej z pochodnej\" (Second Order Derivative), chyba \u017ce u\u017cyjemy `create_graph=True`.\n",
     "\n",
     "1.  Bierzemy wagi modelu (parametry $\\theta$).\n",
-    "2.  Liczymy stratę na 5 punktach (Support Set).\n",
+    "2.  Liczymy strat\u0119 na 5 punktach (Support Set).\n",
     "3.  Liczymy gradient $\\nabla L$.\n",
     "4.  Tworzymy **Tymczasowe Wagi** (Fast Weights): $\\theta' = \\theta - \\alpha \\nabla L$.\n",
-    "5.  Używamy $\\theta'$ do oceny nowych punktów (Query Set).\n",
-    "6.  Liczymy stratę na Query Set.\n",
-    "7.  Robimy Backprop aż do oryginalnych wag $\\theta$."
+    "5.  U\u017cywamy $\\theta'$ do oceny nowych punkt\u00f3w (Query Set).\n",
+    "6.  Liczymy strat\u0119 na Query Set.\n",
+    "7.  Robimy Backprop a\u017c do oryginalnych wag $\\theta$."
    ]
   },
   {
@@ -207,20 +214,20 @@
     "import torch.nn.functional as F\n",
     "\n",
     "def meta_train_step(meta_model, meta_optimizer):\n",
-    "    # 1. Losujemy nowe zadanie (nową falę)\n",
+    "    # 1. Losujemy nowe zadanie (now\u0105 fal\u0119)\n",
     "    task = SineWaveTask()\n",
     "    \n",
     "    # 2. Pobieramy dane do nauki (Support) i do sprawdzianu (Query)\n",
-    "    x_support, y_support = task.sample_data(K_SHOT) # 5 punktów\n",
-    "    x_query, y_query = task.sample_data(K_SHOT)     # Inne 5 punktów tej samej fali\n",
+    "    x_support, y_support = task.sample_data(K_SHOT) # 5 punkt\u00f3w\n",
+    "    x_query, y_query = task.sample_data(K_SHOT)     # Inne 5 punkt\u00f3w tej samej fali\n",
     "    \n",
     "    # 3. --- INNER LOOP (Szybka adaptacja) ---\n",
-    "    # Obliczamy predykcję na oryginalnych wagach\n",
+    "    # Obliczamy predykcj\u0119 na oryginalnych wagach\n",
     "    preds = meta_model(x_support)\n",
     "    loss = criterion(preds, y_support)\n",
     "    \n",
-    "    # Obliczamy gradienty RĘCZNIE\n",
-    "    # create_graph=True jest kluczowe! Pozwala nam potem różniczkować ten krok.\n",
+    "    # Obliczamy gradienty R\u0118CZNIE\n",
+    "    # create_graph=True jest kluczowe! Pozwala nam potem r\u00f3\u017cniczkowa\u0107 ten krok.\n",
     "    grads = torch.autograd.grad(loss, meta_model.parameters(), create_graph=True)\n",
     "    \n",
     "    # Tworzymy \"Szybkie Wagi\" (Fast Weights) - to jest symulacja kroku SGD\n",
@@ -230,12 +237,12 @@
     "        fast_weights[name] = param - INNER_LR * grad\n",
     "\n",
     "    # 4. --- OUTER LOOP (Ocena adaptacji) ---\n",
-    "    # Teraz musimy użyć fast_weights do predykcji na Query Set.\n",
-    "    # W PyTorch nie da się łatwo podmienić wag w modelu funkcjonalnie,\n",
-    "    # więc użyjemy sztuczki: ręcznego forward passu (functional call) \n",
-    "    # albo prostej reimplementacji forwardu na wagach słownikowych.\n",
+    "    # Teraz musimy u\u017cy\u0107 fast_weights do predykcji na Query Set.\n",
+    "    # W PyTorch nie da si\u0119 \u0142atwo podmieni\u0107 wag w modelu funkcjonalnie,\n",
+    "    # wi\u0119c u\u017cyjemy sztuczki: r\u0119cznego forward passu (functional call) \n",
+    "    # albo prostej reimplementacji forwardu na wagach s\u0142ownikowych.\n",
     "    \n",
-    "    # Uproszczony forward na słowniku wag (dla naszego MLP)\n",
+    "    # Uproszczony forward na s\u0142owniku wag (dla naszego MLP)\n",
     "    def functional_forward(x, weights):\n",
     "        x = F.linear(x, weights['net.0.weight'], weights['net.0.bias'])\n",
     "        x = F.relu(x)\n",
@@ -244,13 +251,13 @@
     "        x = F.linear(x, weights['net.4.weight'], weights['net.4.bias'])\n",
     "        return x\n",
     "\n",
-    "    # Predykcja na \"zaadaptowanym mózgu\"\n",
+    "    # Predykcja na \"zaadaptowanym m\u00f3zgu\"\n",
     "    preds_query = functional_forward(x_query, fast_weights)\n",
     "    meta_loss = criterion(preds_query, y_query)\n",
     "    \n",
     "    # 5. Aktualizacja Meta-Modelu\n",
     "    meta_optimizer.zero_grad()\n",
-    "    meta_loss.backward() # To liczy pochodną z całego procesu adaptacji!\n",
+    "    meta_loss.backward() # To liczy pochodn\u0105 z ca\u0142ego procesu adaptacji!\n",
     "    meta_optimizer.step()\n",
     "    \n",
     "    return meta_loss.item()\n",
@@ -258,14 +265,14 @@
     "# TRENING (Meta-Training)\n",
     "print(\"Start Meta-Treningu...\")\n",
     "losses = []\n",
-    "for i in range(2000): # 2000 epizodów\n",
+    "for i in range(2000): # 2000 epizod\u00f3w\n",
     "    loss = meta_train_step(meta_model, meta_optimizer)\n",
     "    losses.append(loss)\n",
     "    if i % 200 == 0:\n",
     "        print(f\"Epizod {i}, Meta-Loss: {loss:.4f}\")\n",
     "\n",
     "plt.plot(losses)\n",
-    "plt.title(\"Meta-Loss (Jak dobrze model uczy się uczyć?)\")\n",
+    "plt.title(\"Meta-Loss (Jak dobrze model uczy si\u0119 uczy\u0107?)\")\n",
     "plt.show()"
    ]
   },
@@ -276,13 +283,13 @@
    "source": [
     "## Wielki Test: Adaptacja w locie\n",
     "\n",
-    "Sprawdźmy to.\n",
-    "1.  Wylosujemy zupełnie nową falę (Zadanie, którego model nigdy nie widział).\n",
-    "2.  Pokażemy modelowi **tylko 5 punktów**.\n",
+    "Sprawd\u017amy to.\n",
+    "1.  Wylosujemy zupe\u0142nie now\u0105 fal\u0119 (Zadanie, kt\u00f3rego model nigdy nie widzia\u0142).\n",
+    "2.  Poka\u017cemy modelowi **tylko 5 punkt\u00f3w**.\n",
     "3.  Zrobimy **jeden krok** aktualizacji wag.\n",
-    "4.  Sprawdzimy, czy model \"zrozumiał\", o jaką falę chodzi.\n",
+    "4.  Sprawdzimy, czy model \"zrozumia\u0142\", o jak\u0105 fal\u0119 chodzi.\n",
     "\n",
-    "Porównamy to z modelem \"głupim\" (przed adaptacją)."
+    "Por\u00f3wnamy to z modelem \"g\u0142upim\" (przed adaptacj\u0105)."
    ]
   },
   {
@@ -307,14 +314,14 @@
     "test_task = SineWaveTask()\n",
     "x_supp, y_supp = test_task.sample_data(K_SHOT)\n",
     "\n",
-    "# 1. Model PRZED adaptacją (Zero-shot)\n",
-    "# Powinien zwrócić coś uśrednionego (np. płaską linię albo średnią sinusoidę)\n",
+    "# 1. Model PRZED adaptacj\u0105 (Zero-shot)\n",
+    "# Powinien zwr\u00f3ci\u0107 co\u015b u\u015brednionego (np. p\u0142ask\u0105 lini\u0119 albo \u015bredni\u0105 sinusoid\u0119)\n",
     "with torch.no_grad():\n",
     "    x_range = torch.linspace(-5, 5, 100).unsqueeze(1)\n",
     "    y_pred_before = meta_model(x_range)\n",
     "\n",
     "# 2. ADAPTACJA (One-step Fine-tuning)\n",
-    "# Klonujemy model, żeby nie zepsuć oryginału\n",
+    "# Klonujemy model, \u017ceby nie zepsu\u0107 orygina\u0142u\n",
     "adapted_model = copy.deepcopy(meta_model)\n",
     "adapt_opt = optim.SGD(adapted_model.parameters(), lr=INNER_LR)\n",
     "\n",
@@ -335,15 +342,15 @@
     "y_true = test_task.amplitude * np.sin(x_range.numpy() + test_task.phase)\n",
     "plt.plot(x_range, y_true, label='Prawda (Sinusoida)', color='gray', linestyle='--')\n",
     "\n",
-    "# Punkty, które widział model (tylko 5!)\n",
-    "plt.scatter(x_supp, y_supp, color='red', s=100, label='5 punktów (Trening)', zorder=5)\n",
+    "# Punkty, kt\u00f3re widzia\u0142 model (tylko 5!)\n",
+    "plt.scatter(x_supp, y_supp, color='red', s=100, label='5 punkt\u00f3w (Trening)', zorder=5)\n",
     "\n",
     "# Predykcje\n",
-    "plt.plot(x_range, y_pred_before, label='Przed adaptacją (Błądzenie)', color='blue', alpha=0.5)\n",
+    "plt.plot(x_range, y_pred_before, label='Przed adaptacj\u0105 (B\u0142\u0105dzenie)', color='blue', alpha=0.5)\n",
     "plt.plot(x_range, y_pred_after, label='Po 1 kroku (Sukces!)', color='green', linewidth=3)\n",
     "\n",
     "plt.legend()\n",
-    "plt.title(f\"Few-Shot Learning: Nauka na 5 przykładach\")\n",
+    "plt.title(f\"Few-Shot Learning: Nauka na 5 przyk\u0142adach\")\n",
     "plt.ylim(-5, 5)\n",
     "plt.show()"
    ]
@@ -353,14 +360,14 @@
    "id": "450597ea",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Mądry Start\n",
+    "## \ud83e\udde0 Podsumowanie: M\u0105dry Start\n",
     "\n",
-    "Jeśli zielona linia (\"Po 1 kroku\") dopasowała się do szarej sinusoidy (mimo że widziała tylko 5 czerwonych kropek), to **MAML zadziałał**.\n",
+    "Je\u015bli zielona linia (\"Po 1 kroku\") dopasowa\u0142a si\u0119 do szarej sinusoidy (mimo \u017ce widzia\u0142a tylko 5 czerwonych kropek), to **MAML zadzia\u0142a\u0142**.\n",
     "\n",
-    "Model nie nauczył się \"wszystkich sinusoid na pamięć\".\n",
-    "Nauczył się takiej konfiguracji wag, która jest **niezwykle plastyczna**. Wystarczy lekkie pchnięcie gradientem w oparciu o 5 punktów, żeby wagi \"wskoczyły\" na właściwą orbitę.\n",
+    "Model nie nauczy\u0142 si\u0119 \"wszystkich sinusoid na pami\u0119\u0107\".\n",
+    "Nauczy\u0142 si\u0119 takiej konfiguracji wag, kt\u00f3ra jest **niezwykle plastyczna**. Wystarczy lekkie pchni\u0119cie gradientem w oparciu o 5 punkt\u00f3w, \u017ceby wagi \"wskoczy\u0142y\" na w\u0142a\u015bciw\u0105 orbit\u0119.\n",
     "\n",
-    "To fundament nowoczesnej robotyki (robot widzi nowy przedmiot raz i wie jak go chwycić) oraz systemów GPT (In-Context Learning)."
+    "To fundament nowoczesnej robotyki (robot widzi nowy przedmiot raz i wie jak go chwyci\u0107) oraz system\u00f3w GPT (In-Context Learning)."
    ]
   }
  ],
