--- a/77_Prompt_Engineering_CoT_ToT.ipynb
+++ b/77_Prompt_Engineering_CoT_ToT.ipynb
@@ -2,26 +2,33 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/77_Prompt_Engineering_CoT_ToT.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "64a69950",
    "metadata": {},
    "source": [
-    "# 🌳 Chain of Thought (CoT) & Tree of Thoughts (ToT)\n",
+    "# \ud83c\udf33 Chain of Thought (CoT) & Tree of Thoughts (ToT)\n",
     "\n",
-    "Modele językowe działają na zasadzie \"następnego słowa\". Nie mają planu.\n",
-    "Jeśli zapytasz: *\"Rozwiąż to równanie\"*, model zacznie pisać wynik, zanim w ogóle go obliczy.\n",
+    "Modele j\u0119zykowe dzia\u0142aj\u0105 na zasadzie \"nast\u0119pnego s\u0142owa\". Nie maj\u0105 planu.\n",
+    "Je\u015bli zapytasz: *\"Rozwi\u0105\u017c to r\u00f3wnanie\"*, model zacznie pisa\u0107 wynik, zanim w og\u00f3le go obliczy.\n",
     "\n",
     "**Ewolucja Promptingu:**\n",
-    "1.  **Standard:** `Q: Ile to 2+2? A: 4` (Zero myślenia).\n",
-    "2.  **Chain of Thought (CoT):** `Q: Ile to 2+2? A: Myślmy krok po kroku. Mam dwie liczby...` (Model zyskuje czas obliczeniowy).\n",
-    "3.  **Tree of Thoughts (ToT):** Algorytm przeszukiwania (BFS/DFS) na myślach modelu.\n",
+    "1.  **Standard:** `Q: Ile to 2+2? A: 4` (Zero my\u015blenia).\n",
+    "2.  **Chain of Thought (CoT):** `Q: Ile to 2+2? A: My\u015blmy krok po kroku. Mam dwie liczby...` (Model zyskuje czas obliczeniowy).\n",
+    "3.  **Tree of Thoughts (ToT):** Algorytm przeszukiwania (BFS/DFS) na my\u015blach modelu.\n",
     "\n",
     "**Algorytm ToT:**\n",
     "1.  **Dekompozycja:** Rozbij problem na kroki.\n",
-    "2.  **Generator:** Wymyśl 3 możliwe kolejne kroki.\n",
-    "3.  **Ewaluator:** Oceń każdy krok (np. \"To wygląda obiecująco\" vs \"To ślepa uliczka\").\n",
-    "4.  **Search:** Idź dalej tylko najlepszą ścieżką.\n",
+    "2.  **Generator:** Wymy\u015bl 3 mo\u017cliwe kolejne kroki.\n",
+    "3.  **Ewaluator:** Oce\u0144 ka\u017cdy krok (np. \"To wygl\u0105da obiecuj\u0105co\" vs \"To \u015blepa uliczka\").\n",
+    "4.  **Search:** Id\u017a dalej tylko najlepsz\u0105 \u015bcie\u017ck\u0105.\n",
     "\n",
-    "Zastosujemy to do **Gry w 24** (Masz liczby 4, 9, 10, 13. Użyj +, -, *, /, żeby otrzymać 24)."
+    "Zastosujemy to do **Gry w 24** (Masz liczby 4, 9, 10, 13. U\u017cyj +, -, *, /, \u017ceby otrzyma\u0107 24)."
    ]
   },
   {
@@ -34,7 +41,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Liczby wejściowe: [4, 9, 10, 13]\n",
+      "Liczby wej\u015bciowe: [4, 9, 10, 13]\n",
       "Cel: 24\n"
      ]
     }
@@ -43,14 +50,14 @@
     "import operator\n",
     "\n",
     "# 1. DEFINIUJEMY PROBLEM (Gra w 24)\n",
-    "# Mamy liczby. Musimy znaleźć działanie, które da 24.\n",
-    "# Przykład dla ludzi: 4, 9, 10, 13\n",
-    "# Rozwiązanie: (13 - 9) * (10 - 4) = 4 * 6 = 24\n",
+    "# Mamy liczby. Musimy znale\u017a\u0107 dzia\u0142anie, kt\u00f3re da 24.\n",
+    "# Przyk\u0142ad dla ludzi: 4, 9, 10, 13\n",
+    "# Rozwi\u0105zanie: (13 - 9) * (10 - 4) = 4 * 6 = 24\n",
     "\n",
     "input_numbers = [4, 9, 10, 13]\n",
     "TARGET = 24\n",
     "\n",
-    "print(f\"Liczby wejściowe: {input_numbers}\")\n",
+    "print(f\"Liczby wej\u015bciowe: {input_numbers}\")\n",
     "print(f\"Cel: {TARGET}\")"
    ]
   },
@@ -59,12 +66,12 @@
    "id": "5f547b7e",
    "metadata": {},
    "source": [
-    "## Symulacja LLM (Generator Myśli)\n",
+    "## Symulacja LLM (Generator My\u015bli)\n",
     "\n",
-    "Normalnie użylibyśmy tu GPT-4, żeby wymyślał działania.\n",
-    "Tu napiszemy funkcję w Pythonie, która **symuluje** działanie modelu – generuje wszystkie możliwe operacje matematyczne między dwiema liczbami.\n",
+    "Normalnie u\u017cyliby\u015bmy tu GPT-4, \u017ceby wymy\u015bla\u0142 dzia\u0142ania.\n",
+    "Tu napiszemy funkcj\u0119 w Pythonie, kt\u00f3ra **symuluje** dzia\u0142anie modelu \u2013 generuje wszystkie mo\u017cliwe operacje matematyczne mi\u0119dzy dwiema liczbami.\n",
     "\n",
-    "To będzie nasz **Generator Myśli**."
+    "To b\u0119dzie nasz **Generator My\u015bli**."
    ]
   },
   {
@@ -77,42 +84,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wymyślono 30 możliwych pierwszych ruchów.\n",
-      "Przykłady:\n",
-      " - 4 + 9 = 13 -> Zostają: [10, 13, 13]\n",
-      " - 4 * 9 = 36 -> Zostają: [10, 13, 36]\n",
-      " - 4 + 10 = 14 -> Zostają: [9, 13, 14]\n"
+      "Wymy\u015blono 30 mo\u017cliwych pierwszych ruch\u00f3w.\n",
+      "Przyk\u0142ady:\n",
+      " - 4 + 9 = 13 -> Zostaj\u0105: [10, 13, 13]\n",
+      " - 4 * 9 = 36 -> Zostaj\u0105: [10, 13, 36]\n",
+      " - 4 + 10 = 14 -> Zostaj\u0105: [9, 13, 14]\n"
      ]
     }
    ],
    "source": [
     "def get_possible_next_steps(current_numbers):\n",
     "    \"\"\"\n",
-    "    To jest symulacja tego, co robiłby GPT-4 w kroku 'Generation'.\n",
-    "    Bierze listę liczb i proponuje nowe stany, łącząc dwie liczby działaniem.\n",
+    "    To jest symulacja tego, co robi\u0142by GPT-4 w kroku 'Generation'.\n",
+    "    Bierze list\u0119 liczb i proponuje nowe stany, \u0142\u0105cz\u0105c dwie liczby dzia\u0142aniem.\n",
     "    \"\"\"\n",
     "    next_steps = []\n",
     "    \n",
-    "    # Próbujemy połączyć każdą liczbę z każdą inną\n",
+    "    # Pr\u00f3bujemy po\u0142\u0105czy\u0107 ka\u017cd\u0105 liczb\u0119 z ka\u017cd\u0105 inn\u0105\n",
     "    for i in range(len(current_numbers)):\n",
     "        for j in range(len(current_numbers)):\n",
-    "            if i == j: continue # Nie łączymy liczby samej ze sobą\n",
+    "            if i == j: continue # Nie \u0142\u0105czymy liczby samej ze sob\u0105\n",
     "            \n",
     "            a = current_numbers[i]\n",
     "            b = current_numbers[j]\n",
     "            \n",
-    "            # Reszta liczb (których nie ruszamy)\n",
+    "            # Reszta liczb (kt\u00f3rych nie ruszamy)\n",
     "            remaining = [current_numbers[k] for k in range(len(current_numbers)) if k != i and k != j]\n",
     "            \n",
-    "            # Generujemy możliwe operacje (Myśli)\n",
+    "            # Generujemy mo\u017cliwe operacje (My\u015bli)\n",
     "            # 1. Dodawanie\n",
     "            next_steps.append((remaining + [a + b], f\"{a} + {b} = {a+b}\"))\n",
-    "            # 2. Mnożenie\n",
+    "            # 2. Mno\u017cenie\n",
     "            next_steps.append((remaining + [a * b], f\"{a} * {b} = {a*b}\"))\n",
     "            # 3. Odejmowanie (a-b)\n",
-    "            if a > b: # Uproszczenie: unikamy ujemnych dla czytelności\n",
+    "            if a > b: # Uproszczenie: unikamy ujemnych dla czytelno\u015bci\n",
     "                next_steps.append((remaining + [a - b], f\"{a} - {b} = {a-b}\"))\n",
-    "            # 4. Dzielenie (tylko jeśli bez reszty)\n",
+    "            # 4. Dzielenie (tylko je\u015bli bez reszty)\n",
     "            if b != 0 and a % b == 0:\n",
     "                next_steps.append((remaining + [int(a / b)], f\"{a} / {b} = {int(a/b)}\"))\n",
     "                \n",
@@ -120,10 +127,10 @@
     "\n",
     "# Test generatora\n",
     "kroki = get_possible_next_steps([4, 9, 10, 13])\n",
-    "print(f\"Wymyślono {len(kroki)} możliwych pierwszych ruchów.\")\n",
-    "print(\"Przykłady:\")\n",
+    "print(f\"Wymy\u015blono {len(kroki)} mo\u017cliwych pierwszych ruch\u00f3w.\")\n",
+    "print(\"Przyk\u0142ady:\")\n",
     "for k in kroki[:3]:\n",
-    "    print(f\" - {k[1]} -> Zostają: {k[0]}\")"
+    "    print(f\" - {k[1]} -> Zostaj\u0105: {k[0]}\")"
    ]
   },
   {
@@ -134,12 +141,12 @@
     "## Algorytm Przeszukiwania (BFS - Breadth First Search)\n",
     "\n",
     "To jest serce **Tree of Thoughts**.\n",
-    "Nie idziemy \"na pałę\" w głąb (jak zwykły Chain of Thought).\n",
-    "1.  Generujemy wszystkie możliwości dla kroku 1.\n",
-    "2.  (Opcjonalnie) Oceniamy je i odrzucamy słabe (Pruning).\n",
-    "3.  Dla tych co zostały, generujemy krok 2.\n",
+    "Nie idziemy \"na pa\u0142\u0119\" w g\u0142\u0105b (jak zwyk\u0142y Chain of Thought).\n",
+    "1.  Generujemy wszystkie mo\u017cliwo\u015bci dla kroku 1.\n",
+    "2.  (Opcjonalnie) Oceniamy je i odrzucamy s\u0142abe (Pruning).\n",
+    "3.  Dla tych co zosta\u0142y, generujemy krok 2.\n",
     "\n",
-    "Stworzymy system, który trzyma **historię myśli** (Path)."
+    "Stworzymy system, kt\u00f3ry trzyma **histori\u0119 my\u015bli** (Path)."
    ]
   },
   {
@@ -158,32 +165,32 @@
    ],
    "source": [
     "def solve_tree_of_thoughts(numbers, target=24):\n",
-    "    # Kolejka stanów: (aktualne_liczby, historia_kroków)\n",
+    "    # Kolejka stan\u00f3w: (aktualne_liczby, historia_krok\u00f3w)\n",
     "    queue = [(numbers, [])]\n",
     "    \n",
     "    solutions = []\n",
     "    \n",
-    "    # Pętla BFS (Szukamy rozwiązania poziom po poziomie)\n",
+    "    # P\u0119tla BFS (Szukamy rozwi\u0105zania poziom po poziomie)\n",
     "    while queue:\n",
     "        current_nums, history = queue.pop(0) # Pobieramy najstarszy element\n",
     "        \n",
     "        # SPRAWDZENIE SUKCESU\n",
-    "        # Jeśli została 1 liczba i jest to 24 -> Mamy to!\n",
+    "        # Je\u015bli zosta\u0142a 1 liczba i jest to 24 -> Mamy to!\n",
     "        if len(current_nums) == 1:\n",
     "            if current_nums[0] == target:\n",
-    "                return history # Zwracamy zwycięską ścieżkę\n",
-    "            continue # Jak nie 24, to ślepa uliczka\n",
+    "                return history # Zwracamy zwyci\u0119sk\u0105 \u015bcie\u017ck\u0119\n",
+    "            continue # Jak nie 24, to \u015blepa uliczka\n",
     "            \n",
-    "        # GENEROWANIE NOWYCH MYŚLI\n",
+    "        # GENEROWANIE NOWYCH MY\u015aLI\n",
     "        possible_moves = get_possible_next_steps(current_nums)\n",
     "        \n",
-    "        # (Tu normalnie byłby krok EWALUACJI przez LLM: \"Czy ten ruch ma sens?\")\n",
-    "        # My zrobimy prostą heurystykę: nie dodajemy do kolejki, jeśli nie ma sensu.\n",
+    "        # (Tu normalnie by\u0142by krok EWALUACJI przez LLM: \"Czy ten ruch ma sens?\")\n",
+    "        # My zrobimy prost\u0105 heurystyk\u0119: nie dodajemy do kolejki, je\u015bli nie ma sensu.\n",
     "        \n",
     "        for next_nums, step_desc in possible_moves:\n",
-    "            # Tworzymy nową historię\n",
+    "            # Tworzymy now\u0105 histori\u0119\n",
     "            new_history = history + [step_desc]\n",
-    "            # Dodajemy do kolejki do sprawdzenia w przyszłości\n",
+    "            # Dodajemy do kolejki do sprawdzenia w przysz\u0142o\u015bci\n",
     "            queue.append((next_nums, new_history))\n",
     "            \n",
     "    return None # Nie znaleziono\n",
@@ -201,9 +208,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rozwiązywanie dla: [4, 9, 10, 13]...\n",
+      "Rozwi\u0105zywanie dla: [4, 9, 10, 13]...\n",
       "\n",
-      "✅ ZNALEZIONO ROZWIĄZANIE (Tree of Thoughts):\n",
+      "\u2705 ZNALEZIONO ROZWI\u0104ZANIE (Tree of Thoughts):\n",
       "Krok 1: 9 + 10 = 19\n",
       "Krok 2: 19 - 13 = 6\n",
       "Krok 3: 4 * 6 = 24\n"
@@ -212,16 +219,16 @@
    ],
    "source": [
     "# URUCHOMIENIE\n",
-    "print(f\"Rozwiązywanie dla: {input_numbers}...\")\n",
+    "print(f\"Rozwi\u0105zywanie dla: {input_numbers}...\")\n",
     "\n",
     "solution_path = solve_tree_of_thoughts(input_numbers)\n",
     "\n",
     "if solution_path:\n",
-    "    print(\"\\n✅ ZNALEZIONO ROZWIĄZANIE (Tree of Thoughts):\")\n",
+    "    print(\"\\n\u2705 ZNALEZIONO ROZWI\u0104ZANIE (Tree of Thoughts):\")\n",
     "    for i, step in enumerate(solution_path):\n",
     "        print(f\"Krok {i+1}: {step}\")\n",
     "else:\n",
-    "    print(\"❌ Nie udało się znaleźć rozwiązania.\")"
+    "    print(\"\u274c Nie uda\u0142o si\u0119 znale\u017a\u0107 rozwi\u0105zania.\")"
    ]
   },
   {
@@ -229,30 +236,30 @@
    "id": "93e55e43",
    "metadata": {},
    "source": [
-    "## Wersja LLM (Jak to wygląda w kodzie produkcyjnym?)\n",
+    "## Wersja LLM (Jak to wygl\u0105da w kodzie produkcyjnym?)\n",
     "\n",
-    "Gdybyśmy używali prawdziwego LLM (np. GPT-4), kod wyglądałby tak:\n",
+    "Gdyby\u015bmy u\u017cywali prawdziwego LLM (np. GPT-4), kod wygl\u0105da\u0142by tak:\n",
     "\n",
     "```python\n",
     "# Pseudokod Tree of Thoughts z LLM\n",
     "\n",
     "def generate_thoughts(state):\n",
-    "    prompt = f\"Masz liczby {state}. Wypisz 3 możliwe kolejne kroki.\"\n",
+    "    prompt = f\"Masz liczby {state}. Wypisz 3 mo\u017cliwe kolejne kroki.\"\n",
     "    return gpt4.complete(prompt) # Zwraca [\"10-4=6\", \"13+9=22\", ...]\n",
     "\n",
     "def evaluate_thoughts(thoughts):\n",
-    "    prompt = f\"Oceń, czy te kroki przybliżają nas do 24: {thoughts}. Daj punktację 0-1.\"\n",
+    "    prompt = f\"Oce\u0144, czy te kroki przybli\u017caj\u0105 nas do 24: {thoughts}. Daj punktacj\u0119 0-1.\"\n",
     "    return gpt4.complete(prompt) # Zwraca [0.9, 0.1, ...]\n",
     "\n",
-    "# Pętla sterująca\n",
+    "# P\u0119tla steruj\u0105ca\n",
     "current_states = [start]\n",
     "for step in range(3):\n",
     "    new_states = []\n",
     "    for s in current_states:\n",
-    "        thoughts = generate_thoughts(s)  # LLM wymyśla\n",
+    "        thoughts = generate_thoughts(s)  # LLM wymy\u015bla\n",
     "        scores = evaluate_thoughts(thoughts) # LLM ocenia\n",
     "        \n",
-    "        # Wybieramy tylko najlepsze myśli (Pruning)\n",
+    "        # Wybieramy tylko najlepsze my\u015bli (Pruning)\n",
     "        best_thoughts = [t for t, s in zip(thoughts, scores) if s > 0.7]\n",
     "        new_states.extend(best_thoughts)\n",
     "    \n",
@@ -264,14 +271,14 @@
    "id": "86fe64f9",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Myślenie Systemu 2\n",
+    "## \ud83e\udde0 Podsumowanie: My\u015blenie Systemu 2\n",
     "\n",
-    "Daniel Kahneman w książce \"Pułapki myślenia\" opisał dwa systemy:\n",
-    "1.  **System 1:** Szybki, instynktowny (To jest zwykły ChatGPT).\n",
-    "2.  **System 2:** Wolny, analityczny, planujący (To jest Tree of Thoughts).\n",
+    "Daniel Kahneman w ksi\u0105\u017cce \"Pu\u0142apki my\u015blenia\" opisa\u0142 dwa systemy:\n",
+    "1.  **System 1:** Szybki, instynktowny (To jest zwyk\u0142y ChatGPT).\n",
+    "2.  **System 2:** Wolny, analityczny, planuj\u0105cy (To jest Tree of Thoughts).\n",
     "\n",
-    "**Inżynieria Promptów** w 2025 roku nie polega na szukaniu \"magicznych słów\".\n",
-    "Polega na budowaniu **architektury przepływu myśli** (Flow Engineering), gdzie wymuszamy na modelu System 2, każąc mu generować alternatywy i je oceniać przed podjęciem decyzji."
+    "**In\u017cynieria Prompt\u00f3w** w 2025 roku nie polega na szukaniu \"magicznych s\u0142\u00f3w\".\n",
+    "Polega na budowaniu **architektury przep\u0142ywu my\u015bli** (Flow Engineering), gdzie wymuszamy na modelu System 2, ka\u017c\u0105c mu generowa\u0107 alternatywy i je ocenia\u0107 przed podj\u0119ciem decyzji."
    ]
   }
  ],
