--- a/79_Vector_Compression_Product_Quantization.ipynb
+++ b/79_Vector_Compression_Product_Quantization.ipynb
@@ -2,23 +2,30 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/79_Vector_Compression_Product_Quantization.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d1974b20",
    "metadata": {},
    "source": [
-    "# 🗜️ Product Quantization (PQ): Jak zmieścić miliard wektorów w RAM?\n",
+    "# \ud83d\udddc\ufe0f Product Quantization (PQ): Jak zmie\u015bci\u0107 miliard wektor\u00f3w w RAM?\n",
     "\n",
-    "Standardowy wektor z OpenAI ma 1536 wymiarów. Każda liczba to `float32` (4 bajty).\n",
+    "Standardowy wektor z OpenAI ma 1536 wymiar\u00f3w. Ka\u017cda liczba to `float32` (4 bajty).\n",
     "Jeden wektor = 6 KB.\n",
-    "Miliard wektorów = **6 TB RAM**. To kosztuje fortunę.\n",
+    "Miliard wektor\u00f3w = **6 TB RAM**. To kosztuje fortun\u0119.\n",
     "\n",
-    "**Product Quantization** to metoda stratnej kompresji wektorów.\n",
+    "**Product Quantization** to metoda stratnej kompresji wektor\u00f3w.\n",
     "\n",
     "**Algorytm:**\n",
-    "1.  **Podział (Split):** Dzielimy długi wektor (np. 128D) na 8 krótkich kawałków (po 16D).\n",
-    "2.  **Klastrowanie (Train):** Dla każdego kawałka uczymy osobny algorytm K-Means (tworzymy \"Książkę Kodów\").\n",
-    "3.  **Kodowanie (Encode):** Zamiast zapisywać liczby, zapisujemy tylko **ID klastra**, do którego pasuje dany kawałek.\n",
+    "1.  **Podzia\u0142 (Split):** Dzielimy d\u0142ugi wektor (np. 128D) na 8 kr\u00f3tkich kawa\u0142k\u00f3w (po 16D).\n",
+    "2.  **Klastrowanie (Train):** Dla ka\u017cdego kawa\u0142ka uczymy osobny algorytm K-Means (tworzymy \"Ksi\u0105\u017ck\u0119 Kod\u00f3w\").\n",
+    "3.  **Kodowanie (Encode):** Zamiast zapisywa\u0107 liczby, zapisujemy tylko **ID klastra**, do kt\u00f3rego pasuje dany kawa\u0142ek.\n",
     "\n",
-    "Efekt? Zamiast 128 liczb float, mamy 8 liczb int (bajtów)."
+    "Efekt? Zamiast 128 liczb float, mamy 8 liczb int (bajt\u00f3w)."
    ]
   },
   {
@@ -43,14 +50,14 @@
     "from sklearn.metrics import mean_squared_error\n",
     "\n",
     "# 1. GENERUJEMY DANE (Wysoki wymiar)\n",
-    "# Symulacja embeddingów (np. 10 000 dokumentów, każdy ma 128 cech)\n",
+    "# Symulacja embedding\u00f3w (np. 10 000 dokument\u00f3w, ka\u017cdy ma 128 cech)\n",
     "N_VECTORS = 10_000\n",
     "DIM = 128\n",
     "\n",
     "np.random.seed(42)\n",
     "data = np.random.random((N_VECTORS, DIM)).astype(np.float32)\n",
     "\n",
-    "# Sprawdźmy rozmiar w pamięci\n",
+    "# Sprawd\u017amy rozmiar w pami\u0119ci\n",
     "original_size_mb = data.nbytes / 1024 / 1024\n",
     "print(f\"Dane oryginalne: {data.shape}\")\n",
     "print(f\"Rozmiar w RAM: {original_size_mb:.2f} MB\")"
@@ -63,10 +70,10 @@
    "source": [
     "## Trening PQ (Tworzenie Codebooka)\n",
     "\n",
-    "Podzielimy wektor 128D na **8 podprzestrzeni (sub-spaces)** po 16D każda.\n",
-    "Dla każdej podprzestrzeni wytrenujemy `K-Means` z 256 centrami (klastrami).\n",
+    "Podzielimy wektor 128D na **8 podprzestrzeni (sub-spaces)** po 16D ka\u017cda.\n",
+    "Dla ka\u017cdej podprzestrzeni wytrenujemy `K-Means` z 256 centrami (klastrami).\n",
     "\n",
-    "Dlaczego 256? Bo 256 to $2^8$. Każdy ID klastra zmieści się w **jednym bajcie** (`uint8`)."
+    "Dlaczego 256? Bo 256 to $2^8$. Ka\u017cdy ID klastra zmie\u015bci si\u0119 w **jednym bajcie** (`uint8`)."
    ]
   },
   {
@@ -79,30 +86,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dzielimy wektor 128D na 8 kawałków po 16D.\n",
-      "Trenowanie K-Means dla każdego kawałka...\n",
-      "  -> Wytrenowano podprzestrzeń 1/8\n",
-      "  -> Wytrenowano podprzestrzeń 3/8\n",
-      "  -> Wytrenowano podprzestrzeń 5/8\n",
-      "  -> Wytrenowano podprzestrzeń 7/8\n",
-      "✅ Codebook gotowy.\n"
+      "Dzielimy wektor 128D na 8 kawa\u0142k\u00f3w po 16D.\n",
+      "Trenowanie K-Means dla ka\u017cdego kawa\u0142ka...\n",
+      "  -> Wytrenowano podprzestrze\u0144 1/8\n",
+      "  -> Wytrenowano podprzestrze\u0144 3/8\n",
+      "  -> Wytrenowano podprzestrze\u0144 5/8\n",
+      "  -> Wytrenowano podprzestrze\u0144 7/8\n",
+      "\u2705 Codebook gotowy.\n"
      ]
     }
    ],
    "source": [
     "# Konfiguracja PQ\n",
-    "M = 8  # Na ile kawałków dzielimy wektor? (128 / 8 = 16 wymiarów na kawałek)\n",
+    "M = 8  # Na ile kawa\u0142k\u00f3w dzielimy wektor? (128 / 8 = 16 wymiar\u00f3w na kawa\u0142ek)\n",
     "SUB_DIM = DIM // M\n",
-    "K = 256 # Ile centrów w każdym kawałku? (mieści się w 1 bajcie)\n",
+    "K = 256 # Ile centr\u00f3w w ka\u017cdym kawa\u0142ku? (mie\u015bci si\u0119 w 1 bajcie)\n",
     "\n",
     "# Tablica na nasze modele K-Means (Codebooks)\n",
     "codebooks = []\n",
     "\n",
-    "print(f\"Dzielimy wektor 128D na {M} kawałków po {SUB_DIM}D.\")\n",
-    "print(\"Trenowanie K-Means dla każdego kawałka...\")\n",
+    "print(f\"Dzielimy wektor 128D na {M} kawa\u0142k\u00f3w po {SUB_DIM}D.\")\n",
+    "print(\"Trenowanie K-Means dla ka\u017cdego kawa\u0142ka...\")\n",
     "\n",
     "for m in range(M):\n",
-    "    # Wyciągamy m-ty kawałek ze wszystkich danych\n",
+    "    # Wyci\u0105gamy m-ty kawa\u0142ek ze wszystkich danych\n",
     "    # slicing: wszystkie wiersze, kolumny od m*sub_dim do (m+1)*sub_dim\n",
     "    sub_data = data[:, m*SUB_DIM : (m+1)*SUB_DIM]\n",
     "    \n",
@@ -110,13 +117,13 @@
     "    kmeans = KMeans(n_clusters=K, n_init=3, random_state=42)\n",
     "    kmeans.fit(sub_data)\n",
     "    \n",
-    "    # Zapisujemy centra (to jest nasz \"słownik\")\n",
+    "    # Zapisujemy centra (to jest nasz \"s\u0142ownik\")\n",
     "    codebooks.append(kmeans.cluster_centers_)\n",
     "    \n",
     "    if m % 2 == 0:\n",
-    "        print(f\"  -> Wytrenowano podprzestrzeń {m+1}/{M}\")\n",
+    "        print(f\"  -> Wytrenowano podprzestrze\u0144 {m+1}/{M}\")\n",
     "\n",
-    "print(\"✅ Codebook gotowy.\")"
+    "print(\"\u2705 Codebook gotowy.\")"
    ]
   },
   {
@@ -126,8 +133,8 @@
    "source": [
     "## Kodowanie (Kompresja)\n",
     "\n",
-    "Teraz zamienimy nasze wielkie wektory na małe kody.\n",
-    "Dla każdego kawałka wektora szukamy najbliższego centrum w Codebooku i zapisujemy tylko jego **indeks**."
+    "Teraz zamienimy nasze wielkie wektory na ma\u0142e kody.\n",
+    "Dla ka\u017cdego kawa\u0142ka wektora szukamy najbli\u017cszego centrum w Codebooku i zapisujemy tylko jego **indeks**."
    ]
   },
   {
@@ -144,9 +151,9 @@
       "Wymiar skompresowany: (10000, 8)\n",
       "Typ danych: uint8\n",
       "------------------------------\n",
-      "Rozmiar Oryginału: 4.88 MB\n",
+      "Rozmiar Orygina\u0142u: 4.88 MB\n",
       "Rozmiar PQ:        0.08 MB\n",
-      "🚀 Kompresja: 64.0x mniejszy!\n"
+      "\ud83d\ude80 Kompresja: 64.0x mniejszy!\n"
      ]
     }
    ],
@@ -163,13 +170,13 @@
     "        sub_vectors = vectors[:, m*sub_dim : (m+1)*sub_dim]\n",
     "        centroids = codebooks[m]\n",
     "        \n",
-    "        # Szukamy najbliższego centroidu dla każdego wektora\n",
+    "        # Szukamy najbli\u017cszego centroidu dla ka\u017cdego wektora\n",
     "        # (W prawdziwym FAISS to jest zoptymalizowane w C++, tu robimy brute-force w numpy)\n",
     "        # Obliczamy dystanse: ||x - c||^2\n",
     "        \n",
-    "        # Dla każdego wektora liczymy odległość do 256 centroidów\n",
-    "        # Używamy tricku z broadcastingiem, żeby nie robić pętli po wektorach\n",
-    "        # Ale dla czytelności zróbmy prosto: użyjmy predict z K-Means (choć wolne)\n",
+    "        # Dla ka\u017cdego wektora liczymy odleg\u0142o\u015b\u0107 do 256 centroid\u00f3w\n",
+    "        # U\u017cywamy tricku z broadcastingiem, \u017ceby nie robi\u0107 p\u0119tli po wektorach\n",
+    "        # Ale dla czytelno\u015bci zr\u00f3bmy prosto: u\u017cyjmy predict z K-Means (cho\u0107 wolne)\n",
     "        \n",
     "        # Szybsza metoda matematyczna (L2 distance):\n",
     "        # dystans = sqrt(sum((x - c)^2))\n",
@@ -186,14 +193,14 @@
     "print(f\"Wymiar skompresowany: {compressed_data.shape}\")\n",
     "print(f\"Typ danych: {compressed_data.dtype}\")\n",
     "\n",
-    "# Porównanie rozmiaru\n",
+    "# Por\u00f3wnanie rozmiaru\n",
     "compressed_size_mb = compressed_data.nbytes / 1024 / 1024\n",
     "ratio = original_size_mb / compressed_size_mb\n",
     "\n",
     "print(\"-\" * 30)\n",
-    "print(f\"Rozmiar Oryginału: {original_size_mb:.2f} MB\")\n",
+    "print(f\"Rozmiar Orygina\u0142u: {original_size_mb:.2f} MB\")\n",
     "print(f\"Rozmiar PQ:        {compressed_size_mb:.2f} MB\")\n",
-    "print(f\"🚀 Kompresja: {ratio:.1f}x mniejszy!\")"
+    "print(f\"\ud83d\ude80 Kompresja: {ratio:.1f}x mniejszy!\")"
    ]
   },
   {
@@ -201,12 +208,12 @@
    "id": "67277975",
    "metadata": {},
    "source": [
-    "## Dekodowanie (Rekonstrukcja) i Błąd\n",
+    "## Dekodowanie (Rekonstrukcja) i B\u0142\u0105d\n",
     "\n",
-    "Wektory PQ są stratne. Nie odzyskamy idealnie oryginału.\n",
-    "Odzyskujemy **przybliżenie** – zamiast prawdziwego wektora, wstawiamy w jego miejsce centroid (wzorzec).\n",
+    "Wektory PQ s\u0105 stratne. Nie odzyskamy idealnie orygina\u0142u.\n",
+    "Odzyskujemy **przybli\u017cenie** \u2013 zamiast prawdziwego wektora, wstawiamy w jego miejsce centroid (wzorzec).\n",
     "\n",
-    "Sprawdźmy, jak duży jest błąd."
+    "Sprawd\u017amy, jak du\u017cy jest b\u0142\u0105d."
    ]
   },
   {
@@ -219,7 +226,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Błąd rekonstrukcji (MSE): 0.041142\n"
+      "B\u0142\u0105d rekonstrukcji (MSE): 0.041142\n"
      ]
     },
     {
@@ -243,9 +250,9 @@
     "    reconstructed = np.zeros((n_samples, dim), dtype=np.float32)\n",
     "    \n",
     "    for m in range(m_chunks):\n",
-    "        # Bierzemy indeksy dla danego kawałka\n",
+    "        # Bierzemy indeksy dla danego kawa\u0142ka\n",
     "        indices = codes[:, m]\n",
-    "        # Wyciągamy odpowiadające im centroidy\n",
+    "        # Wyci\u0105gamy odpowiadaj\u0105ce im centroidy\n",
     "        reconstructed[:, m*sub_dim : (m+1)*sub_dim] = codebooks[m][indices]\n",
     "        \n",
     "    return reconstructed\n",
@@ -253,15 +260,15 @@
     "# Odtwarzamy\n",
     "reconstructed_data = decode_pq(compressed_data, codebooks)\n",
     "\n",
-    "# Liczymy błąd (MSE)\n",
+    "# Liczymy b\u0142\u0105d (MSE)\n",
     "mse = mean_squared_error(data, reconstructed_data)\n",
-    "print(f\"Błąd rekonstrukcji (MSE): {mse:.6f}\")\n",
+    "print(f\"B\u0142\u0105d rekonstrukcji (MSE): {mse:.6f}\")\n",
     "\n",
-    "# Wizualizacja: Oryginał vs PQ (Pierwsze 50 wymiarów jednego wektora)\n",
+    "# Wizualizacja: Orygina\u0142 vs PQ (Pierwsze 50 wymiar\u00f3w jednego wektora)\n",
     "plt.figure(figsize=(12, 5))\n",
-    "plt.plot(data[0, :50], label=\"Oryginał\", alpha=0.7)\n",
+    "plt.plot(data[0, :50], label=\"Orygina\u0142\", alpha=0.7)\n",
     "plt.plot(reconstructed_data[0, :50], label=\"Rekonstrukcja PQ\", linestyle=\"--\")\n",
-    "plt.title(\"Porównanie: Oryginał vs Skompresowany\")\n",
+    "plt.title(\"Por\u00f3wnanie: Orygina\u0142 vs Skompresowany\")\n",
     "plt.legend()\n",
     "plt.show()"
    ]
@@ -271,16 +278,16 @@
    "id": "d8faac55",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: IVFPQ\n",
+    "## \ud83e\udde0 Podsumowanie: IVFPQ\n",
     "\n",
-    "To, co zrobiliśmy (PQ), jest fundamentem najpopularniejszego indeksu w bazach wektorowych: **IVFPQ** (Inverted File + Product Quantization).\n",
+    "To, co zrobili\u015bmy (PQ), jest fundamentem najpopularniejszego indeksu w bazach wektorowych: **IVFPQ** (Inverted File + Product Quantization).\n",
     "\n",
-    "1.  **IVF (Inverted File):** Dzieli przestrzeń na komórki (jak HNSW czy Voronoi), żeby nie przeszukiwać wszystkiego.\n",
-    "2.  **PQ (Product Quantization):** Kompresuje wektory wewnątrz komórek, żeby zmieściły się w RAM.\n",
+    "1.  **IVF (Inverted File):** Dzieli przestrze\u0144 na kom\u00f3rki (jak HNSW czy Voronoi), \u017ceby nie przeszukiwa\u0107 wszystkiego.\n",
+    "2.  **PQ (Product Quantization):** Kompresuje wektory wewn\u0105trz kom\u00f3rek, \u017ceby zmie\u015bci\u0142y si\u0119 w RAM.\n",
     "\n",
     "**Efekt:**\n",
-    "Możesz przeszukiwać miliard wektorów na jednym serwerze w milisekundy.\n",
-    "Wykres pokazuje, że rekonstrukcja nie jest idealna, ale \"kształt\" wektora jest zachowany wystarczająco dobrze, by Cosine Similarity nadal wskazywało poprawne dokumenty w RAG."
+    "Mo\u017cesz przeszukiwa\u0107 miliard wektor\u00f3w na jednym serwerze w milisekundy.\n",
+    "Wykres pokazuje, \u017ce rekonstrukcja nie jest idealna, ale \"kszta\u0142t\" wektora jest zachowany wystarczaj\u0105co dobrze, by Cosine Similarity nadal wskazywa\u0142o poprawne dokumenty w RAG."
    ]
   }
  ],
