--- a/80_Speculative_Decoding.ipynb
+++ b/80_Speculative_Decoding.ipynb
@@ -2,22 +2,29 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/80_Speculative_Decoding.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4f8b485d",
    "metadata": {},
    "source": [
-    "# ⏩ Speculative Decoding: Jak przyspieszyć LLM 2x bez utraty jakości?\n",
+    "# \u23e9 Speculative Decoding: Jak przyspieszy\u0107 LLM 2x bez utraty jako\u015bci?\n",
     "\n",
-    "Wielkie modele (Target Model) są ograniczone przez **Memory Bandwidth** (przepustowość pamięci). Załadowanie wag trwa dłużej niż same obliczenia.\n",
-    "Dlatego uruchomienie modelu dla 1 tokena kosztuje tyle samo czasu, co dla 5 tokenów (jeśli robimy to równolegle).\n",
+    "Wielkie modele (Target Model) s\u0105 ograniczone przez **Memory Bandwidth** (przepustowo\u015b\u0107 pami\u0119ci). Za\u0142adowanie wag trwa d\u0142u\u017cej ni\u017c same obliczenia.\n",
+    "Dlatego uruchomienie modelu dla 1 tokena kosztuje tyle samo czasu, co dla 5 token\u00f3w (je\u015bli robimy to r\u00f3wnolegle).\n",
     "\n",
     "**Algorytm Spekulacyjny:**\n",
-    "1.  **Draft:** Mały model (np. GPT-2) generuje szybko `K` tokenów (np. \"Ala ma kota\").\n",
-    "2.  **Verify:** Duży model (np. GPT-4) dostaje ten ciąg i liczy prawdopodobieństwa dla wszystkich pozycji naraz.\n",
-    "3.  **Accept/Reject:** Sprawdzamy, czy Duży Model zgadza się z Małym.\n",
-    "    *   Akceptujemy prefiks, który jest zgodny.\n",
-    "    *   Resztę odrzucamy i generujemy poprawny token z Dużego Modelu.\n",
+    "1.  **Draft:** Ma\u0142y model (np. GPT-2) generuje szybko `K` token\u00f3w (np. \"Ala ma kota\").\n",
+    "2.  **Verify:** Du\u017cy model (np. GPT-4) dostaje ten ci\u0105g i liczy prawdopodobie\u0144stwa dla wszystkich pozycji naraz.\n",
+    "3.  **Accept/Reject:** Sprawdzamy, czy Du\u017cy Model zgadza si\u0119 z Ma\u0142ym.\n",
+    "    *   Akceptujemy prefiks, kt\u00f3ry jest zgodny.\n",
+    "    *   Reszt\u0119 odrzucamy i generujemy poprawny token z Du\u017cego Modelu.\n",
     "\n",
-    "Zrobimy symulację tego procesu, używając sztucznych opóźnień (`time.sleep`), żeby pokazać zysk czasowy."
+    "Zrobimy symulacj\u0119 tego procesu, u\u017cywaj\u0105c sztucznych op\u00f3\u017anie\u0144 (`time.sleep`), \u017ceby pokaza\u0107 zysk czasowy."
    ]
   },
   {
@@ -30,7 +37,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Zdanie docelowe: ['Sztuczna', 'inteligencja', 'zmienia', 'świat', 'na', 'lepsze']\n",
+      "Zdanie docelowe: ['Sztuczna', 'inteligencja', 'zmienia', '\u015bwiat', 'na', 'lepsze']\n",
       "Draft jest 10x szybszy od Targetu.\n"
      ]
     }
@@ -42,16 +49,16 @@
     "import numpy as np\n",
     "\n",
     "# Konfiguracja symulacji\n",
-    "# Target Model jest mądry (dokładny), ale wolny\n",
+    "# Target Model jest m\u0105dry (dok\u0142adny), ale wolny\n",
     "TARGET_TIME_PER_TOKEN = 0.1  # 100 ms\n",
-    "# Draft Model jest głupi (często się myli), ale szybki\n",
+    "# Draft Model jest g\u0142upi (cz\u0119sto si\u0119 myli), ale szybki\n",
     "DRAFT_TIME_PER_TOKEN = 0.01  # 10 ms\n",
     "\n",
-    "# Długość spekulacji (ile tokenów zgadujemy naraz?)\n",
+    "# D\u0142ugo\u015b\u0107 spekulacji (ile token\u00f3w zgadujemy naraz?)\n",
     "K_LOOKAHEAD = 4 \n",
     "\n",
-    "# Nasze \"Słownictwo\" (uproszczone)\n",
-    "target_sentence = \"Sztuczna inteligencja zmienia świat na lepsze\".split()\n",
+    "# Nasze \"S\u0142ownictwo\" (uproszczone)\n",
+    "target_sentence = \"Sztuczna inteligencja zmienia \u015bwiat na lepsze\".split()\n",
     "vocab = {word: i for i, word in enumerate(target_sentence)}\n",
     "vocab_inv = {i: word for word, i in vocab.items()}\n",
     "\n",
@@ -67,8 +74,8 @@
     "## Symulacja Modeli\n",
     "\n",
     "Stworzymy dwie funkcje:\n",
-    "1.  `target_model`: Zawsze zwraca poprawne słowo, ale \"myśli\" długo.\n",
-    "2.  `draft_model`: Myśli szybko, ale ma np. 70% szans na trafienie (symulacja mniejszej inteligencji)."
+    "1.  `target_model`: Zawsze zwraca poprawne s\u0142owo, ale \"my\u015bli\" d\u0142ugo.\n",
+    "2.  `draft_model`: My\u015bli szybko, ale ma np. 70% szans na trafienie (symulacja mniejszej inteligencji)."
    ]
   },
   {
@@ -95,30 +102,30 @@
     "\n",
     "    def forward(self, input_ids):\n",
     "        \"\"\"\n",
-    "        Zwraca następny token (lub listę tokenów).\n",
+    "        Zwraca nast\u0119pny token (lub list\u0119 token\u00f3w).\n",
     "        \"\"\"\n",
-    "        # Symulacja czasu obliczeń\n",
+    "        # Symulacja czasu oblicze\u0144\n",
     "        time.sleep(self.latency)\n",
     "        \n",
     "        current_len = len(input_ids)\n",
     "        if current_len >= len(self.true_sentence):\n",
     "            return \"<EOS>\" # Koniec zdania\n",
     "        \n",
-    "        # Prawdziwy token, który powinien być\n",
+    "        # Prawdziwy token, kt\u00f3ry powinien by\u0107\n",
     "        true_token = self.true_sentence[current_len]\n",
     "        \n",
-    "        # Czy model zgadł?\n",
+    "        # Czy model zgad\u0142?\n",
     "        if random.random() < self.accuracy:\n",
     "            return true_token\n",
     "        else:\n",
-    "            # Pomyłka (losowe słowo ze słownika)\n",
+    "            # Pomy\u0142ka (losowe s\u0142owo ze s\u0142ownika)\n",
     "            return random.choice(list(vocab.keys()))\n",
     "\n",
     "# Inicjalizacja\n",
-    "# Target: 100% dokładności (to nasza wyrocznia), wolny\n",
+    "# Target: 100% dok\u0142adno\u015bci (to nasza wyrocznia), wolny\n",
     "target_model = MockModel(\"Target (Big)\", TARGET_TIME_PER_TOKEN, 1.0, target_sentence)\n",
     "\n",
-    "# Draft: 70% dokładności, szybki\n",
+    "# Draft: 70% dok\u0142adno\u015bci, szybki\n",
     "draft_model = MockModel(\"Draft (Small)\", DRAFT_TIME_PER_TOKEN, 0.7, target_sentence)\n",
     "\n",
     "print(\"Modele gotowe.\")"
@@ -131,7 +138,7 @@
    "source": [
     "## Metoda 1: Standardowa Generacja (Autoregresyjna)\n",
     "\n",
-    "To jest sposób, w jaki normalnie działa ChatGPT. Jeden token po drugim, używając tylko dużego modelu."
+    "To jest spos\u00f3b, w jaki normalnie dzia\u0142a ChatGPT. Jeden token po drugim, u\u017cywaj\u0105c tylko du\u017cego modelu."
    ]
   },
   {
@@ -148,12 +155,12 @@
       "Generated: Sztuczna\n",
       "Generated: inteligencja\n",
       "Generated: zmienia\n",
-      "Generated: świat\n",
+      "Generated: \u015bwiat\n",
       "Generated: na\n",
       "Generated: lepsze\n",
       "\n",
       "Czas Standardowy: 0.6032 s\n",
-      "Prędkość: 9.95 tokens/s\n"
+      "Pr\u0119dko\u015b\u0107: 9.95 tokens/s\n"
      ]
     }
    ],
@@ -164,7 +171,7 @@
     "    \n",
     "    print(\"--- STANDARD GENERATION ---\")\n",
     "    while len(current_text) < len(target_sentence):\n",
-    "        # Generujemy 1 token Dużym Modelem\n",
+    "        # Generujemy 1 token Du\u017cym Modelem\n",
     "        token = target_model.forward(current_text)\n",
     "        current_text.append(token)\n",
     "        print(f\"Generated: {token}\")\n",
@@ -174,7 +181,7 @@
     "\n",
     "time_std, tokens_std = standard_generation()\n",
     "print(f\"\\nCzas Standardowy: {time_std:.4f} s\")\n",
-    "print(f\"Prędkość: {tokens_std / time_std:.2f} tokens/s\")"
+    "print(f\"Pr\u0119dko\u015b\u0107: {tokens_std / time_std:.2f} tokens/s\")"
    ]
   },
   {
@@ -185,11 +192,11 @@
     "## Metoda 2: Speculative Decoding\n",
     "\n",
     "Teraz algorytm spekulacyjny:\n",
-    "1.  Pętla główna.\n",
-    "2.  **Krok Draftu:** Mały model generuje `K` tokenów jeden po drugim (szybko).\n",
-    "3.  **Krok Weryfikacji:** Duży model sprawdza te `K` tokenów + 1 dodatkowy (równolegle).\n",
-    "    *   *Uwaga: W naszej symulacji Pythona \"równoległość\" symulujemy tym, że `target_model` sprawdza listę tokenów w tym samym czasie co pojedynczy token (bo koszt to głównie załadowanie wag).*\n",
-    "4.  **Akceptacja:** Bierzemy tyle tokenów, ile się zgadza."
+    "1.  P\u0119tla g\u0142\u00f3wna.\n",
+    "2.  **Krok Draftu:** Ma\u0142y model generuje `K` token\u00f3w jeden po drugim (szybko).\n",
+    "3.  **Krok Weryfikacji:** Du\u017cy model sprawdza te `K` token\u00f3w + 1 dodatkowy (r\u00f3wnolegle).\n",
+    "    *   *Uwaga: W naszej symulacji Pythona \"r\u00f3wnoleg\u0142o\u015b\u0107\" symulujemy tym, \u017ce `target_model` sprawdza list\u0119 token\u00f3w w tym samym czasie co pojedynczy token (bo koszt to g\u0142\u00f3wnie za\u0142adowanie wag).*\n",
+    "4.  **Akceptacja:** Bierzemy tyle token\u00f3w, ile si\u0119 zgadza."
    ]
   },
   {
@@ -203,11 +210,11 @@
      "output_type": "stream",
      "text": [
       "--- SPECULATIVE GENERATION ---\n",
-      "Draft: ['Sztuczna', 'inteligencja', 'świat', 'świat'] -> Zaakceptowano: ['Sztuczna', 'inteligencja', 'zmienia'] ✅\n",
-      "Draft: ['świat', 'na', 'lepsze'] -> Zaakceptowano: ['świat', 'na', 'lepsze'] ✅\n",
+      "Draft: ['Sztuczna', 'inteligencja', '\u015bwiat', '\u015bwiat'] -> Zaakceptowano: ['Sztuczna', 'inteligencja', 'zmienia'] \u2705\n",
+      "Draft: ['\u015bwiat', 'na', 'lepsze'] -> Zaakceptowano: ['\u015bwiat', 'na', 'lepsze'] \u2705\n",
       "\n",
       "Czas Spekulacyjny: 0.2736 s\n",
-      "Prędkość: 21.93 tokens/s\n"
+      "Pr\u0119dko\u015b\u0107: 21.93 tokens/s\n"
      ]
     }
    ],
@@ -219,7 +226,7 @@
     "    print(\"--- SPECULATIVE GENERATION ---\")\n",
     "    \n",
     "    while len(current_text) < len(target_sentence):\n",
-    "        # 1. DRAFT PHASE (Mały model zgaduje K razy)\n",
+    "        # 1. DRAFT PHASE (Ma\u0142y model zgaduje K razy)\n",
     "        draft_tokens = []\n",
     "        temp_context = current_text.copy()\n",
     "        \n",
@@ -229,17 +236,17 @@
     "            draft_tokens.append(token)\n",
     "            temp_context.append(token)\n",
     "            \n",
-    "        # 2. VERIFICATION PHASE (Duży model sprawdza)\n",
-    "        # W prawdziwym GPU to dzieje się w JEDNYM przebiegu (batch)\n",
-    "        # Symulujemy koszt jednego uruchomienia dużego modelu\n",
+    "        # 2. VERIFICATION PHASE (Du\u017cy model sprawdza)\n",
+    "        # W prawdziwym GPU to dzieje si\u0119 w JEDNYM przebiegu (batch)\n",
+    "        # Symulujemy koszt jednego uruchomienia du\u017cego modelu\n",
     "        time.sleep(TARGET_TIME_PER_TOKEN) \n",
     "        \n",
-    "        # Sprawdzamy poprawność (Verify)\n",
-    "        # Target model generuje \"swoją wersję\" dla każdego kroku w drafcie\n",
-    "        # (W prawdziwym świecie liczy prawdopodobieństwa P(x))\n",
+    "        # Sprawdzamy poprawno\u015b\u0107 (Verify)\n",
+    "        # Target model generuje \"swoj\u0105 wersj\u0119\" dla ka\u017cdego kroku w drafcie\n",
+    "        # (W prawdziwym \u015bwiecie liczy prawdopodobie\u0144stwa P(x))\n",
     "        accepted_tokens = []\n",
     "        for i, draft_tok in enumerate(draft_tokens):\n",
-    "            # Jaki token powinien być na tej pozycji wg Targetu?\n",
+    "            # Jaki token powinien by\u0107 na tej pozycji wg Targetu?\n",
     "            true_pos = len(current_text) + i\n",
     "            if true_pos >= len(target_sentence): break\n",
     "            \n",
@@ -248,16 +255,16 @@
     "            if draft_tok == target_tok:\n",
     "                accepted_tokens.append(draft_tok)\n",
     "            else:\n",
-    "                # Błąd! Odrzucamy resztę draftu\n",
-    "                # Target model \"poprawia\" ten jeden błąd\n",
+    "                # B\u0142\u0105d! Odrzucamy reszt\u0119 draftu\n",
+    "                # Target model \"poprawia\" ten jeden b\u0142\u0105d\n",
     "                accepted_tokens.append(target_tok)\n",
-    "                break # Przerywamy akceptację\n",
+    "                break # Przerywamy akceptacj\u0119\n",
     "        \n",
     "        # Aktualizacja tekstu\n",
     "        current_text.extend(accepted_tokens)\n",
     "        \n",
     "        # Logowanie\n",
-    "        status = \"✅\" if len(accepted_tokens) > 1 else \"❌\"\n",
+    "        status = \"\u2705\" if len(accepted_tokens) > 1 else \"\u274c\"\n",
     "        print(f\"Draft: {draft_tokens} -> Zaakceptowano: {accepted_tokens} {status}\")\n",
     "\n",
     "    total_time = time.time() - start_time\n",
@@ -265,7 +272,7 @@
     "\n",
     "time_spec, tokens_spec = speculative_generation()\n",
     "print(f\"\\nCzas Spekulacyjny: {time_spec:.4f} s\")\n",
-    "print(f\"Prędkość: {tokens_spec / time_spec:.2f} tokens/s\")"
+    "print(f\"Pr\u0119dko\u015b\u0107: {tokens_spec / time_spec:.2f} tokens/s\")"
    ]
   },
   {
@@ -281,8 +288,8 @@
       "------------------------------\n",
       "Standard: 0.6032s\n",
       "Speculative: 0.2736s\n",
-      "🚀 PRZYSPIESZENIE: 2.20x\n",
-      "Sukces! Mały model skutecznie pomógł dużemu.\n"
+      "\ud83d\ude80 PRZYSPIESZENIE: 2.20x\n",
+      "Sukces! Ma\u0142y model skutecznie pom\u00f3g\u0142 du\u017cemu.\n"
      ]
     }
    ],
@@ -292,12 +299,12 @@
     "print(\"-\" * 30)\n",
     "print(f\"Standard: {time_std:.4f}s\")\n",
     "print(f\"Speculative: {time_spec:.4f}s\")\n",
-    "print(f\"🚀 PRZYSPIESZENIE: {speedup:.2f}x\")\n",
+    "print(f\"\ud83d\ude80 PRZYSPIESZENIE: {speedup:.2f}x\")\n",
     "\n",
     "if speedup > 1.0:\n",
-    "    print(\"Sukces! Mały model skutecznie pomógł dużemu.\")\n",
+    "    print(\"Sukces! Ma\u0142y model skutecznie pom\u00f3g\u0142 du\u017cemu.\")\n",
     "else:\n",
-    "    print(\"Porażka. Mały model mylił się zbyt często (narzut czasowy draftu zjadł zysk).\")"
+    "    print(\"Pora\u017cka. Ma\u0142y model myli\u0142 si\u0119 zbyt cz\u0119sto (narzut czasowy draftu zjad\u0142 zysk).\")"
    ]
   },
   {
@@ -305,15 +312,15 @@
    "id": "22c7d947",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Hazard, który się opłaca\n",
+    "## \ud83e\udde0 Podsumowanie: Hazard, kt\u00f3ry si\u0119 op\u0142aca\n",
     "\n",
-    "Jeśli mały model ma skuteczność (Acceptance Rate) powyżej ~50-60%, spekulacja się opłaca.\n",
-    "Jeśli mały model jest beznadziejny, spekulacja tylko spowalnia (bo tracimy czas na draft, który i tak idzie do kosza).\n",
+    "Je\u015bli ma\u0142y model ma skuteczno\u015b\u0107 (Acceptance Rate) powy\u017cej ~50-60%, spekulacja si\u0119 op\u0142aca.\n",
+    "Je\u015bli ma\u0142y model jest beznadziejny, spekulacja tylko spowalnia (bo tracimy czas na draft, kt\u00f3ry i tak idzie do kosza).\n",
     "\n",
-    "**Dlaczego to działa na GPU?**\n",
-    "Uruchomienie modelu GPT-4 dla sekwencji o długości 1 (input) kosztuje np. 50ms.\n",
-    "Uruchomienie go dla sekwencji o długości 5 (input) też kosztuje ok. 50-55ms.\n",
-    "Dzięki temu **weryfikacja 5 tokenów jest prawie darmowa** w porównaniu do generowania ich pojedynczo.\n",
+    "**Dlaczego to dzia\u0142a na GPU?**\n",
+    "Uruchomienie modelu GPT-4 dla sekwencji o d\u0142ugo\u015bci 1 (input) kosztuje np. 50ms.\n",
+    "Uruchomienie go dla sekwencji o d\u0142ugo\u015bci 5 (input) te\u017c kosztuje ok. 50-55ms.\n",
+    "Dzi\u0119ki temu **weryfikacja 5 token\u00f3w jest prawie darmowa** w por\u00f3wnaniu do generowania ich pojedynczo.\n",
     "\n",
     "To obecnie standardowa technika w bibliotekach takich jak **vLLM** czy **HuggingFace TGI**."
    ]
